--- a/_tweets-md/2024/2024-01-01-tweets.md
+++ b/_tweets-md/2024/2024-01-01-tweets.md
@@ -14,7 +14,7 @@ time:  23:59:59 +0000
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530137112908249)
 
-> There’s also a @BlockchainComns video that just excerpts the Animated QR Implementation Guide from the meeting. [4/9] https://www.youtube.com/watch?v=z9fmgCqMZvw
+> There’s also a @BlockchainComns video that just excerpts the Animated QR Implementation Guide from the meeting. [4/9] [https://www.youtube.com/watch?v=z9fmgCqMZvw](https://www.youtube.com/watch?v=z9fmgCqMZvw)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530138245390545)
 
@@ -22,7 +22,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553013711
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530135758168272)
 
-> Animated QRs have been Blockchain Commons’ most popular (and most implemented) specification, but to date developers had to work from source code to see how the Fountain Codes worked. Now there’s a complete developers guide. [3/9] https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2024-001-multipart-ur.md
+> Animated QRs have been Blockchain Commons’ most popular (and most implemented) specification, but to date developers had to work from source code to see how the Fountain Codes worked. Now there’s a complete developers guide. [3/9] [https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2024-001-multipart-ur.md](https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2024-001-multipart-ur.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530137112908249)
 
@@ -30,13 +30,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553013575
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530134596345952)
 
-> Why do you need Animated QRs? To safely and securely transmit big data, as QRs have tight limits. PSBTs were the use case that pushed the demand, but supporting key recovery with metadata is another example of the need to transmit more data. [2/9] https://www.youtube.com/watch?v=HsFF5HPKQIk
+> Why do you need Animated QRs? To safely and securely transmit big data, as QRs have tight limits. PSBTs were the use case that pushed the demand, but supporting key recovery with metadata is another example of the need to transmit more data. [2/9] [https://www.youtube.com/watch?v=HsFF5HPKQIk](https://www.youtube.com/watch?v=HsFF5HPKQIk)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530135758168272)
 
 ----
 
-> Our January Gordian Developers Meeting from @BlockchainComns focused Animated QRs with Fountain Codes, leveraging Multi-Part URs. Used by  various airgapped Bitcoin Wallets to transfer PSBTs, they are also useful in other scenarios  [1/9]. https://www.youtube.com/watch?v=xRYgEczhekg
+> Our January Gordian Developers Meeting from @BlockchainComns focused Animated QRs with Fountain Codes, leveraging Multi-Part URs. Used by  various airgapped Bitcoin Wallets to transfer PSBTs, they are also useful in other scenarios  [1/9]. [https://www.youtube.com/watch?v=xRYgEczhekg](https://www.youtube.com/watch?v=xRYgEczhekg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530134596345952)
 
@@ -44,7 +44,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553013459
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530140929724512)
 
-> The research status info was of particular note. @BlockchainComns releases specifications, but they’re works in process, in coordination with the community. The new statuses note how stable any specification is, based on community implementation [7/9] https://github.com/BlockchainCommons/Research/blob/master/README.md#status 
+> The research status info was of particular note. @BlockchainComns releases specifications, but they’re works in process, in coordination with the community. The new statuses note how stable any specification is, based on community implementation [7/9] [https://github.com/BlockchainCommons/Research/blob/master/README.md#status](https://github.com/BlockchainCommons/Research/blob/master/README.md#status) 
 > 
 > ![1745530142104150381-GDlcwPRa4AMcmkz]({{ site.url }}{{ site.baseurl }}/assets/images/media/1745530142104150381-GDlcwPRa4AMcmkz.webp)
 
@@ -54,7 +54,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553014092
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530139671453778)
 
-> There was lots more at the meeting. dCBOR, ed25519 support in Seed Tool, research statuses, and a look at our future work on open development of libraries to secure signing via NFCs. [6/9] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md
+> There was lots more at the meeting. dCBOR, ed25519 support in Seed Tool, research statuses, and a look at our future work on open development of libraries to secure signing via NFCs. [6/9] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:30 +0000 2024](https://twitter.com/ChristopherA/status/1745530140929724512)
 
@@ -62,7 +62,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553013967
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530138245390545)
 
-> Now, you can see (or read) all about how to make Animated QRs work in an efficient way, using Fountain Codes so that the whole set of data doesn’t have to be retransmitted when something is (inevitably) missed. [5/9] https://developer.blockchaincommons.com/animated-qrs/
+> Now, you can see (or read) all about how to make Animated QRs work in an efficient way, using Fountain Codes so that the whole set of data doesn’t have to be retransmitted when something is (inevitably) missed. [5/9] [https://developer.blockchaincommons.com/animated-qrs/](https://developer.blockchaincommons.com/animated-qrs/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:30 +0000 2024](https://twitter.com/ChristopherA/status/1745530139671453778)
 
@@ -70,7 +70,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553013824
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530144427774327)
 
-> Please help to support this continuing work by becoming a monthly financial sponsor of @BlockchainComns  via Github. 2023 was a tough year for many of our patrons, so we’re seeking more funding to help keep this work going. [9/9] https://github.com/sponsors/BlockchainCommons
+> Please help to support this continuing work by becoming a monthly financial sponsor of @BlockchainComns  via Github. 2023 was a tough year for many of our patrons, so we’re seeking more funding to help keep this work going. [9/9] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:31 +0000 2024](https://twitter.com/ChristopherA/status/1745530145526751720)
 
@@ -78,26 +78,26 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553014442
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530142104150381)
 
-> The video, the transcript and slides for the January Gordian meeting are available, and you can see all of our other Gordian Developer Meetings on  topics of wallet interoperability, user choice, and safety of your digital assets [8/9] at: https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md
+> The video, the transcript and slides for the January Gordian meeting are available, and you can see all of our other Gordian Developer Meetings on  topics of wallet interoperability, user choice, and safety of your digital assets [8/9] at: [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:31 +0000 2024](https://twitter.com/ChristopherA/status/1745530144427774327)
 
 ----
 
 > RT @DecentralizedID: DIF is thrilled to welcome Kim Hamilton-Duffy as our new Executive Director!  
-> https://blog.identity.foundation/dif-welcomes-our-new-executive-director/
+> [https://blog.identity.foundation/dif-welcomes-our-new-executive-director/](https://blog.identity.foundation/dif-welcomes-our-new-executive-director/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 16 03:58:29 +0000 2024](https://twitter.com/ChristopherA/status/1747106019053010957)
 
 ----
 
-> I worked with @kimdhamilton for a number of years as fellow co-chair of W3C-CCG and as a leader in @RWOTEvents — she is great to collaborate with and a real credit to @DecentralizedID that they are working with her. Congratulations to both! https://twitter.com/DecentralizedID/status/1746961032927691094
+> I worked with @kimdhamilton for a number of years as fellow co-chair of W3C-CCG and as a leader in @RWOTEvents — she is great to collaborate with and a real credit to @DecentralizedID that they are working with her. Congratulations to both! [https://twitter.com/DecentralizedID/status/1746961032927691094](https://twitter.com/DecentralizedID/status/1746961032927691094)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 16 04:02:19 +0000 2024](https://twitter.com/ChristopherA/status/1747106983474544730)
 
 ----
 
-> Last week, @blockchaincomns proudly released its annual report to patrons and the wider community. Delve into our key innovations in digital asset wallet interoperability, and our transformative role in championing standards for openness and resilience. Discover more!…🧵[1/14] https://twitter.com/BlockchainComns/status/1749505317459911061
+> Last week, @blockchaincomns proudly released its annual report to patrons and the wider community. Delve into our key innovations in digital asset wallet interoperability, and our transformative role in championing standards for openness and resilience. Discover more!…🧵[1/14] [https://twitter.com/BlockchainComns/status/1749505317459911061](https://twitter.com/BlockchainComns/status/1749505317459911061)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:24 +0000 2024](https://twitter.com/ChristopherA/status/1749553879195455609)
 
@@ -105,7 +105,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174553014210
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553882580324770)
 
-> In 2023, @blockchaincomns actively fostered community collaboration with a dozen insightful developer meetings, a #FROST round table, and impactful #SiliconSalon workshops. Discover the rich archives of these discussions in our GitHub repository. [4/14] https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts
+> In 2023, @blockchaincomns actively fostered community collaboration with a dozen insightful developer meetings, a #FROST round table, and impactful #SiliconSalon workshops. Discover the rich archives of these discussions in our GitHub repository. [4/14] [https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts](https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:25 +0000 2024](https://twitter.com/ChristopherA/status/1749553884782305428)
 
@@ -113,7 +113,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955388258
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553881024168386)
 
-> dCBOR guarantees data consistency and interoperability across platforms, vital for our Gordian Envelope spec. Leveraging hashed elision, Envelope enhances digital asset privacy. These two specifications are cornerstones of our architecture. [3/14] https://developer.blockchaincommons.com/envelope/
+> dCBOR guarantees data consistency and interoperability across platforms, vital for our Gordian Envelope spec. Leveraging hashed elision, Envelope enhances digital asset privacy. These two specifications are cornerstones of our architecture. [3/14] [https://developer.blockchaincommons.com/envelope/](https://developer.blockchaincommons.com/envelope/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:25 +0000 2024](https://twitter.com/ChristopherA/status/1749553882580324770)
 
@@ -121,7 +121,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955388102
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553879195455609)
 
-> One major focus for the year was international standards. Not only is dCBOR, our deterministic CBOR proposal moving forward on the standards track within the IETF, but we're hopeful it'll become an RFC soon. [2/11] https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/ [2/14]
+> One major focus for the year was international standards. Not only is dCBOR, our deterministic CBOR proposal moving forward on the standards track within the IETF, but we're hopeful it'll become an RFC soon. [2/11] [https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/](https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/) [2/14]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:25 +0000 2024](https://twitter.com/ChristopherA/status/1749553881024168386)
 
@@ -129,7 +129,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955387919
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553886262952161)
 
-> Collaborative Seed Recovery (CSR) project has been a focus since late 2022. It offers a way to resiliently protect your digital-assets, using secret shares. Choose from self-sovereign offline storage, social recovery, or secure remote server shares. [6/14] https://developer.blockchaincommons.com/csr/
+> Collaborative Seed Recovery (CSR) project has been a focus since late 2022. It offers a way to resiliently protect your digital-assets, using secret shares. Choose from self-sovereign offline storage, social recovery, or secure remote server shares. [6/14] [https://developer.blockchaincommons.com/csr/](https://developer.blockchaincommons.com/csr/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:26 +0000 2024](https://twitter.com/ChristopherA/status/1749553887844106640)
 
@@ -137,7 +137,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955388626
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553884782305428)
 
-> One of those meetings was on #FROST, an important up-and-coming cryptographic technology in the digital-asset ecosystem that allows for quorum signatures. This round table gave developers the opportunity to each talk about their own challenges. [5/14] https://developer.blockchaincommons.com/frost/meeting1/
+> One of those meetings was on #FROST, an important up-and-coming cryptographic technology in the digital-asset ecosystem that allows for quorum signatures. This round table gave developers the opportunity to each talk about their own challenges. [5/14] [https://developer.blockchaincommons.com/frost/meeting1/](https://developer.blockchaincommons.com/frost/meeting1/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:26 +0000 2024](https://twitter.com/ChristopherA/status/1749553886262952161)
 
@@ -145,7 +145,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955388478
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553891384152224)
 
-> This year @blockchaincomns demonstrated our commitment to #OpenDevelopment with a new comprehensive framework. Join us in redefining 'open' to encompass transparency, collaboration, and equitable solutions for all. Together, we make a difference! [9/14] https://www.blockchaincommons.com/articles/Open-Development/ 
+> This year @blockchaincomns demonstrated our commitment to #OpenDevelopment with a new comprehensive framework. Join us in redefining 'open' to encompass transparency, collaboration, and equitable solutions for all. Together, we make a difference! [9/14] [https://www.blockchaincommons.com/articles/Open-Development/](https://www.blockchaincommons.com/articles/Open-Development/) 
 > 
 > ![1749553892793409662-GEeRTOYbAAAFQLt]({{ site.url }}{{ site.baseurl }}/assets/images/media/1749553892793409662-GEeRTOYbAAAFQLt.webp)
 
@@ -155,7 +155,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955389138
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553889681322407)
 
-> Another 2023 milestone: the initial release of reference code for Gordian Depository. As part of our CSR, it exemplifies secure storage &amp; recovery of secret shares, reinforcing our commitment to robust digital asset protection and open development. [8/14] https://github.com/BlockchainCommons/bc-depo-rust
+> Another 2023 milestone: the initial release of reference code for Gordian Depository. As part of our CSR, it exemplifies secure storage &amp; recovery of secret shares, reinforcing our commitment to robust digital asset protection and open development. [8/14] [https://github.com/BlockchainCommons/bc-depo-rust](https://github.com/BlockchainCommons/bc-depo-rust)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:27 +0000 2024](https://twitter.com/ChristopherA/status/1749553891384152224)
 
@@ -171,7 +171,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955388784
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553894538264796)
 
-> Discover the full journey of @blockchaincomns. Along with our 2023 yearly report, delve into past annual reports and detailed quarterly updates for a complete picture of our progress and innovation. [11/14] https://www.blockchaincommons.com/quarterlies/Yearly-2023/
+> Discover the full journey of @blockchaincomns. Along with our 2023 yearly report, delve into past annual reports and detailed quarterly updates for a complete picture of our progress and innovation. [11/14] [https://www.blockchaincommons.com/quarterlies/Yearly-2023/](https://www.blockchaincommons.com/quarterlies/Yearly-2023/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:28 +0000 2024](https://twitter.com/ChristopherA/status/1749553896270471461)
 
@@ -179,7 +179,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955389453
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553892793409662)
 
-> As we near our 5th anniversary, the growth of our codebase and documentation led to a significant overhaul of our website. In particular, discover the revamped developer site, a hub for resources on implementing our interoperable specifications. [10/14] https://developer.blockchaincommons.com/
+> As we near our 5th anniversary, the growth of our codebase and documentation led to a significant overhaul of our website. In particular, discover the revamped developer site, a hub for resources on implementing our interoperable specifications. [10/14] [https://developer.blockchaincommons.com/](https://developer.blockchaincommons.com/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:28 +0000 2024](https://twitter.com/ChristopherA/status/1749553894538264796)
 
@@ -187,7 +187,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/174955389279
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553900166996437)
 
-> Join us in shaping the future of digital assets &amp; wallet interoperability. Support us as a financial sponsor for a more open, innovative, resilient digital asset ecosystem. Your sponsorship is key to our success. Sponsor us today via @GitHub.  [14/14] https://github.com/sponsors/BlockchainCommons
+> Join us in shaping the future of digital assets &amp; wallet interoperability. Support us as a financial sponsor for a more open, innovative, resilient digital asset ecosystem. Your sponsorship is key to our success. Sponsor us today via @GitHub.  [14/14] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:29 +0000 2024](https://twitter.com/ChristopherA/status/1749553901593043447)
 
@@ -217,15 +217,15 @@ Replying to [@BTCGandalf](https://twitter.com/BTCGandalf/status/1749602971766170
 
 ----
 
-> A interesting comparison. Worth reading: https://twitter.com/sfmnemonic/status/1680385557439082497
+> A interesting comparison. Worth reading: [https://twitter.com/sfmnemonic/status/1680385557439082497](https://twitter.com/sfmnemonic/status/1680385557439082497)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 24 02:08:09 +0000 2024](https://twitter.com/ChristopherA/status/1749977355999989873)
 
 ----
 
-> RT @peterktodd: https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2024-January/022308.html  
+> RT @peterktodd: [https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2024-January/022308.html](https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2024-January/022308.html)  
 >   
-> https://github.com/petertodd/bitcoin/tree/libre-relay-v26.0  
+> [https://github.com/petertodd/bitcoin/tree/libre-relay-v26.0](https://github.com/petertodd/bitcoin/tree/libre-relay-v26.0)  
 >   
 > tl;dr: I have a Libre Relay prototype available for testing. It does thre…
 
@@ -241,7 +241,7 @@ Replying to [@BTCGandalf](https://twitter.com/BTCGandalf/status/1749602971766170
 
 ----
 
-> My laugh of the day is rather obscure - "scenes from distributed systems" by @b0rk https://twitter.com/b0rk/status/1056560207562711041
+> My laugh of the day is rather obscure - "scenes from distributed systems" by @b0rk [https://twitter.com/b0rk/status/1056560207562711041](https://twitter.com/b0rk/status/1056560207562711041)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 19:39:04 +0000 2024](https://twitter.com/ChristopherA/status/1750604217277141325)
 
