--- a/_tweets-md/2024/2024-02-01-tweets.md
+++ b/_tweets-md/2024/2024-02-01-tweets.md
@@ -10,7 +10,7 @@ time:  23:59:59 +0000
 
 ----
 
-> I had my #VisionPro demo today. 30m with their demo at an Apple Store. As well done as previewers say, but the main thing I wanted to test was seeing my MackBookPro display. I also chatted with @Dom of old #iPhoneDevCamp team about prospects for https://visiondevcamp.org. Sponsors? https://twitter.com/NicoleLazzaro/status/1724932006872817935
+> I had my #VisionPro demo today. 30m with their demo at an Apple Store. As well done as previewers say, but the main thing I wanted to test was seeing my MackBookPro display. I also chatted with @Dom of old #iPhoneDevCamp team about prospects for [https://visiondevcamp.org.](https://visiondevcamp.org.) Sponsors? [https://twitter.com/NicoleLazzaro/status/1724932006872817935](https://twitter.com/NicoleLazzaro/status/1724932006872817935)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 03 02:22:02 +0000 2024](https://twitter.com/ChristopherA/status/1753604730075627986)
 
@@ -18,7 +18,7 @@ time:  23:59:59 +0000
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1753604730075627986)
 
-> Best video I’ve seen so far that explains the #VisionPro experience is by @MKBHD at https://youtu.be/dtp6b76pMak?si=FnhpIoajB4GDd5zH In particular see the FaceTime section near the end. I had some personal experience talking with @dom this way. Imperfect but an interesting social construction.
+> Best video I’ve seen so far that explains the #VisionPro experience is by @MKBHD at [https://youtu.be/dtp6b76pMak?si=FnhpIoajB4GDd5zH](https://youtu.be/dtp6b76pMak?si=FnhpIoajB4GDd5zH) In particular see the FaceTime section near the end. I had some personal experience talking with @dom this way. Imperfect but an interesting social construction.
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 03 03:04:19 +0000 2024](https://twitter.com/ChristopherA/status/1753615370609717588)
 
@@ -27,7 +27,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175360473007
 Replying to [@n1ckler, @salvatoshi, @_sriramk_, @utxoclub, @jesseposner, @chelseakomlo, @BlockstreamJade, @PavolRusnak, @FrostsnapTech and @blksresearch](https://twitter.com/n1ckler/status/1754083422220300497)
 
 > The authors of the FROST paper (@chelseakomlo &amp; Ian Golderberg), and number of different developer teams came to our 1st meeting of an Implementers Round Table in November. We plan to have another in March.  
-> https://developer.blockchaincommons.com/frost/meeting1/
+> [https://developer.blockchaincommons.com/frost/meeting1/](https://developer.blockchaincommons.com/frost/meeting1/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 04 22:05:11 +0000 2024](https://twitter.com/ChristopherA/status/1754264867174002847)
 
@@ -35,7 +35,7 @@ Replying to [@n1ckler, @salvatoshi, @_sriramk_, @utxoclub, @jesseposner, @chelse
 
 Replying to [@n1ckler, @salvatoshi, @_sriramk_, @utxoclub, @jesseposner, @chelseakomlo, @BlockstreamJade, @PavolRusnak, @FrostsnapTech and @blksresearch](https://twitter.com/ChristopherA/status/1754264867174002847)
 
-> If you are interested in presenting at the next FROST Round Table, contact me. You can also subscribe to our wallet developer community announcement list (or join our Signal group) at https://www.blockchaincommons.com/subscribe/
+> If you are interested in presenting at the next FROST Round Table, contact me. You can also subscribe to our wallet developer community announcement list (or join our Signal group) at [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 04 22:07:18 +0000 2024](https://twitter.com/ChristopherA/status/1754265399426949519)
 
@@ -51,13 +51,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175459895603
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754598954212458534)
 
-> Some SSI ecosystems: National Association of Convenience Stores (NACS), Open Credentialing Initiative (OCI), IDUnion, mobile driver licence (mDL). The markdown version of the full paper is at https://github.com/WebOfTrustInfo/rwot12-cologne/blob/main/final-documents/ecosystem-management.md
+> Some SSI ecosystems: National Association of Convenience Stores (NACS), Open Credentialing Initiative (OCI), IDUnion, mobile driver licence (mDL). The markdown version of the full paper is at [https://github.com/WebOfTrustInfo/rwot12-cologne/blob/main/final-documents/ecosystem-management.md](https://github.com/WebOfTrustInfo/rwot12-cologne/blob/main/final-documents/ecosystem-management.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:12:44 +0000 2024](https://twitter.com/ChristopherA/status/1754598956037030021)
 
 ----
 
-> I like this term Ecosystem Coordinator "With SSI being an ecosystem technology, this value is inexorably related to the degree to which the Ecosystem Coordinator achieves to represent the stakeholders' interests inside and outside of their sphere." https://twitter.com/RWOTEvents/status/1754596484870524984
+> I like this term Ecosystem Coordinator "With SSI being an ecosystem technology, this value is inexorably related to the degree to which the Ecosystem Coordinator achieves to represent the stakeholders' interests inside and outside of their sphere." [https://twitter.com/RWOTEvents/status/1754596484870524984](https://twitter.com/RWOTEvents/status/1754596484870524984)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:12:44 +0000 2024](https://twitter.com/ChristopherA/status/1754598954212458534)
 
@@ -65,19 +65,19 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175459895421
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754600457186750823)
 
-> After did:web came out, I proposed a near clone, did:onion, that uses Tor for web pages, offering some decentralization. However, as did not get much support, it has been on hold. I'll have to investigate these ideas to see if did:onion should be updated. https://github.com/BlockchainCommons/did-method-onion
+> After did:web came out, I proposed a near clone, did:onion, that uses Tor for web pages, offering some decentralization. However, as did not get much support, it has been on hold. I'll have to investigate these ideas to see if did:onion should be updated. [https://github.com/BlockchainCommons/did-method-onion](https://github.com/BlockchainCommons/did-method-onion)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:18:42 +0000 2024](https://twitter.com/ChristopherA/status/1754600458558341630)
 
 ----
 
-> I've never endorsed did:web as I've always been uncomfortable with it, but also I didn't block its acceptance into the did registry. This paper dives into some of the shortcoming of did:web, and make some suggestions. https://twitter.com/RWOTEvents/status/1754596075749715979
+> I've never endorsed did:web as I've always been uncomfortable with it, but also I didn't block its acceptance into the did registry. This paper dives into some of the shortcoming of did:web, and make some suggestions. [https://twitter.com/RWOTEvents/status/1754596075749715979](https://twitter.com/RWOTEvents/status/1754596075749715979)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:18:42 +0000 2024](https://twitter.com/ChristopherA/status/1754600457186750823)
 
 ----
 
-> Gordian Seed Tool, the @BlockchainComns iOS exemplar for protecting and using your cryptographic seeds, has been updated to version 1.6 and is available this week for free. [1/11] https://apps.apple.com/us/app/gordian-seed-tool/id1545088229
+> Gordian Seed Tool, the @BlockchainComns iOS exemplar for protecting and using your cryptographic seeds, has been updated to version 1.6 and is available this week for free. [1/11] [https://apps.apple.com/us/app/gordian-seed-tool/id1545088229](https://apps.apple.com/us/app/gordian-seed-tool/id1545088229)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:03 +0000 2024](https://twitter.com/ChristopherA/status/1754965702698840435)
 
@@ -135,7 +135,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175496571363
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965710839984617)
 
-> Gordian Seed Tool now also shows lifehashes of master fingerprints, as another guidance for users recognizing seeds. [7/10] https://lifehash.info/
+> Gordian Seed Tool now also shows lifehashes of master fingerprints, as another guidance for users recognizing seeds. [7/10] [https://lifehash.info/](https://lifehash.info/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:06 +0000 2024](https://twitter.com/ChristopherA/status/1754965713637322960)
 
@@ -143,7 +143,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175496571083
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965718343598384)
 
-> To support this sort of continued work, to empower users and wallet manufacturers alike, please become a @BlockchainComns sponsor. [10/11] https://github.com/sponsors/BlockchainCommons
+> To support this sort of continued work, to empower users and wallet manufacturers alike, please become a @BlockchainComns sponsor. [10/11] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:07 +0000 2024](https://twitter.com/ChristopherA/status/1754965719656419575)
 
@@ -151,7 +151,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175496571834
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965716712018078)
 
-> If you are a wallet developer, you can get an insider's look at Gordian Seed Tool by attending our Gordian Developer Meeting Wednesday at 10am PT (1pm ET, 7pm CET). Sign up for our Signal or ask me for a link. [10/11] https://www.blockchaincommons.com/subscribe/
+> If you are a wallet developer, you can get an insider's look at Gordian Seed Tool by attending our Gordian Developer Meeting Wednesday at 10am PT (1pm ET, 7pm CET). Sign up for our Signal or ask me for a link. [10/11] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:07 +0000 2024](https://twitter.com/ChristopherA/status/1754965718343598384)
 
@@ -159,7 +159,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175496571671
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965715151737180)
 
-> Gordian Seed Tool 1.6 has more than half-a-year's advances in specifications, best practices, and other expansions. If you have an iOS device, take a look. It's free for a few days! [9/11] https://apps.apple.com/us/app/gordian-seed-tool/id1545088229
+> Gordian Seed Tool 1.6 has more than half-a-year's advances in specifications, best practices, and other expansions. If you have an iOS device, take a look. It's free for a few days! [9/11] [https://apps.apple.com/us/app/gordian-seed-tool/id1545088229](https://apps.apple.com/us/app/gordian-seed-tool/id1545088229)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:07 +0000 2024](https://twitter.com/ChristopherA/status/1754965716712018078)
 
@@ -171,7 +171,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/175496571515
 
 ----
 
-> RT @henkvancann: Musings of a Trust Architect: Progressive Trust https://www.blockchaincommons.com/musings/musings-progressive-trust/ via @BlockchainComns  
+> RT @henkvancann: Musings of a Trust Architect: Progressive Trust [https://www.blockchaincommons.com/musings/musings-progressive-trust/](https://www.blockchaincommons.com/musings/musings-progressive-trust/) via @BlockchainComns  
 > An interesting stance on 'sec…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 08 23:12:15 +0000 2024](https://twitter.com/ChristopherA/status/1755731297832714273)
