--- a/_tweets-md/2024/2024-03-01-tweets.md
+++ b/_tweets-md/2024/2024-03-01-tweets.md
@@ -12,7 +12,7 @@ time:  23:59:59 +0000
 
 Replying to [@bitgeiniog, @BitcoinErrorLog and @bordalix](https://twitter.com/bitgeiniog/status/1767321570467368996)
 
-> DID: BTCR was really the first DID method https://w3c-ccg.github.io/didm-btcr/ There is also a good podcast on it at https://rubric.cc/podcast/the-granddaddy-of-dids/
+> DID: BTCR was really the first DID method [https://w3c-ccg.github.io/didm-btcr/](https://w3c-ccg.github.io/didm-btcr/) There is also a good podcast on it at [https://rubric.cc/podcast/the-granddaddy-of-dids/](https://rubric.cc/podcast/the-granddaddy-of-dids/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 11 22:58:03 +0000 2024](https://twitter.com/ChristopherA/status/1767324132801450278)
 
@@ -26,7 +26,7 @@ Replying to [@bitgeiniog, @BitcoinErrorLog and @bordalix](https://twitter.com/bi
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857163323224477)
 
-> Foremembrance Day marks the day in 1943 that the Resistance in the Netherlands tried to destroy the identity registry archives in Amsterdam, to protect the populace from the occupying Nazis. [2/12] https://www.annefrank.org/en/timeline/128/the-resistance-attacks-the-population-register-of-amsterdam/ 
+> Foremembrance Day marks the day in 1943 that the Resistance in the Netherlands tried to destroy the identity registry archives in Amsterdam, to protect the populace from the occupying Nazis. [2/12] [https://www.annefrank.org/en/timeline/128/the-resistance-attacks-the-population-register-of-amsterdam/](https://www.annefrank.org/en/timeline/128/the-resistance-attacks-the-population-register-of-amsterdam/) 
 > 
 > ![1770857165848244592-GJNOiPeWIAABaZn]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857165848244592-GJNOiPeWIAABaZn.webp)
 
@@ -34,7 +34,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177085716332
 
 ----
 
-> Next Wednesday, March 27 is #Foremembrance Day. Join me here for a Livestream just before the sun sets over Amsterdam (11am PT, 2pm ET, 7pm CET). I'll be talking about the dangers of correlated identity, and some lessons from history. [1/11] https://twitter.com/i/broadcasts/1MnxnMLyEPBJO
+> Next Wednesday, March 27 is #Foremembrance Day. Join me here for a Livestream just before the sun sets over Amsterdam (11am PT, 2pm ET, 7pm CET). I'll be talking about the dangers of correlated identity, and some lessons from history. [1/11] [https://twitter.com/i/broadcasts/1MnxnMLyEPBJO](https://twitter.com/i/broadcasts/1MnxnMLyEPBJO)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:03 +0000 2024](https://twitter.com/ChristopherA/status/1770857163323224477)
 
@@ -52,7 +52,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177085716584
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857169107259871)
 
-> Because of the Netherlands' extensive compilation and correlation of data, 75% of the Jews in the country were  killed during the Holocaust. [4/12] https://twitter.com/trbouma/status/1222863239744311296 
+> Because of the Netherlands' extensive compilation and correlation of data, 75% of the Jews in the country were  killed during the Holocaust. [4/12] [https://twitter.com/trbouma/status/1222863239744311296](https://twitter.com/trbouma/status/1222863239744311296) 
 > 
 > ![1770857172663988632-GJNLpUDXAAESQFJ]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857172663988632-GJNLpUDXAAESQFJ.webp)
 > 
@@ -86,7 +86,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177085717651
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857183216865674)
 
-> If you'd like to read about the topic right now, I written more in "Echoes from History", an introduction to a full book on "Foremembrance" I am working on. [8/12] https://www.blockchaincommons.com/articles/echoes-history/
+> If you'd like to read about the topic right now, I written more in "Echoes from History", an introduction to a full book on "Foremembrance" I am working on. [8/12] [https://www.blockchaincommons.com/articles/echoes-history/](https://www.blockchaincommons.com/articles/echoes-history/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:08 +0000 2024](https://twitter.com/ChristopherA/status/1770857184961638772)
 
@@ -94,7 +94,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177085718321
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857179232219270)
 
-> I'll talk about these two men and their historical roles in personal identity in a 5-minute presentation on Wed, March 27, followed by a minute of silence at Amsterdam sunset (7:07p CEST) and an open discussion on how to make identity safer TODAY. [7/12] https://twitter.com/i/broadcasts/1MnxnMLyEPBJO
+> I'll talk about these two men and their historical roles in personal identity in a 5-minute presentation on Wed, March 27, followed by a minute of silence at Amsterdam sunset (7:07p CEST) and an open discussion on how to make identity safer TODAY. [7/12] [https://twitter.com/i/broadcasts/1MnxnMLyEPBJO](https://twitter.com/i/broadcasts/1MnxnMLyEPBJO)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:08 +0000 2024](https://twitter.com/ChristopherA/status/1770857183216865674)
 
@@ -110,7 +110,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177085718740
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857184961638772)
 
-> Another excellent resource on the subject of collecting data: "The Dark Side of Numbers: The Role of Population Data Systems in Human Rights Abuses" by @wseltzer and @margo_shehers [10/11] https://www.jstor.org/stable/40971467
+> Another excellent resource on the subject of collecting data: "The Dark Side of Numbers: The Role of Population Data Systems in Human Rights Abuses" by @wseltzer and @margo_shehers [10/11] [https://www.jstor.org/stable/40971467](https://www.jstor.org/stable/40971467)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:09 +0000 2024](https://twitter.com/ChristopherA/status/1770857187406954499)
 
@@ -126,13 +126,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177085719204
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857190049366077)
 
-> The mission of @BlockchainComns is for an open, interoperable, secure &amp; compassionate digital infrastructure to enable people to control their own digital destiny and to maintain their human dignity online. Support us at https://github.com/sponsors/BlockchainCommons [12/12]
+> The mission of @BlockchainComns is for an open, interoperable, secure &amp; compassionate digital infrastructure to enable people to control their own digital destiny and to maintain their human dignity online. Support us at [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons) [12/12]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:10 +0000 2024](https://twitter.com/ChristopherA/status/1770857192041640227)
 
 ----
 
-> RT @PrivacyMatters: https://t.co/nMULqX2AIo
+> RT @PrivacyMatters: [https://t.co/nMULqX2AIo](https://t.co/nMULqX2AIo)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:26:23 +0000 2024](https://twitter.com/ChristopherA/status/1770924945067151818)
 
@@ -174,7 +174,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709296989874
 
 > Here is our presentation to IETF that failed, the topic of whch maps to @mer__edith’s quote “Tl;dr -- the best way to preserve privacy is not to collect data. The second best way is to destroy the data.”  
 >   
-> https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings/2024/03-18
+> [https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings/2024/03-18](https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings/2024/03-18)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:47:56 +0000 2024](https://twitter.com/ChristopherA/status/1770930367392063911)
 
@@ -182,7 +182,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709296989874
 
 Replying to [@mer__edith](https://twitter.com/ChristopherA/status/1770930367392063911)
 
-> The specific problem requirements IETF internet-draft that we proposed is at https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/
+> The specific problem requirements IETF internet-draft that we proposed is at [https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/](https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:49:24 +0000 2024](https://twitter.com/ChristopherA/status/1770930736704704725)
 
@@ -190,7 +190,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709303673920
 
 Replying to [@mer__edith](https://twitter.com/ChristopherA/status/1770930736704704725)
 
-> We also having a working proof-of-concept with radical improvements to minimal disclosure best practices using basic hash-tree-based elision, with architecture that supports options for signature anti-correlation. IETF internet-draft at https://datatracker.ietf.org/doc/draft-mcnally-envelope/
+> We also having a working proof-of-concept with radical improvements to minimal disclosure best practices using basic hash-tree-based elision, with architecture that supports options for signature anti-correlation. IETF internet-draft at [https://datatracker.ietf.org/doc/draft-mcnally-envelope/](https://datatracker.ietf.org/doc/draft-mcnally-envelope/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:53:24 +0000 2024](https://twitter.com/ChristopherA/status/1770931744440529168)
 
@@ -208,7 +208,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709307367047
 
 ----
 
-> RT @ChristopherA: @mer__edith The specific problem requirements IETF internet-draft that we proposed is at https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/
+> RT @ChristopherA: @mer__edith The specific problem requirements IETF internet-draft that we proposed is at [https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/](https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:56:10 +0000 2024](https://twitter.com/ChristopherA/status/1770932437855477927)
 
@@ -222,7 +222,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709307367047
 
 > RT @AaronvanW: The Genesis Book review by former DigiCash employee Jurjen Bos.  
 >   
-> https://medium.com/@jnebos/i-thought-i-understood-bitcoin-until-now-07e064c4ba7a
+> [https://medium.com/@jnebos/i-thought-i-understood-bitcoin-until-now-07e064c4ba7a](https://medium.com/@jnebos/i-thought-i-understood-bitcoin-until-now-07e064c4ba7a)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:58:10 +0000 2024](https://twitter.com/ChristopherA/status/1770932941712986582)
 
@@ -234,7 +234,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709307367047
 
 ----
 
-> This is why @BlockchainComns is so focused on multisig &amp; threshold quorum choices for keys, recovery resilience. Also why interoperability is so important, as no keys are on one class of hardware. When there are no Single Points of Compromise (SPoC) or Failure (SPoF) no attack. https://twitter.com/KimZetter/status/1770869722760061195
+> This is why @BlockchainComns is so focused on multisig &amp; threshold quorum choices for keys, recovery resilience. Also why interoperability is so important, as no keys are on one class of hardware. When there are no Single Points of Compromise (SPoC) or Failure (SPoF) no attack. [https://twitter.com/KimZetter/status/1770869722760061195](https://twitter.com/KimZetter/status/1770869722760061195)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:27:57 +0000 2024](https://twitter.com/ChristopherA/status/1771000835067306173)
 
@@ -242,7 +242,7 @@ Replying to [@mer__edith](https://twitter.com/ChristopherA/status/17709307367047
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1771000835067306173)
 
-> If you are a wallet developer, here is more on the technologies multiple wallet vendors are beginning to deploy this year: https://developer.blockchaincommons.com/seedrecovery/
+> If you are a wallet developer, here is more on the technologies multiple wallet vendors are beginning to deploy this year: [https://developer.blockchaincommons.com/seedrecovery/](https://developer.blockchaincommons.com/seedrecovery/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:30:49 +0000 2024](https://twitter.com/ChristopherA/status/1771001558182031526)
 
@@ -250,7 +250,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177100083506
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1771001558182031526)
 
-> In the meantime, our current safest multisig scenario that works now is at https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig.md
+> In the meantime, our current safest multisig scenario that works now is at [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:31:58 +0000 2024](https://twitter.com/ChristopherA/status/1771001846376857799)
 
@@ -264,13 +264,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177100184637
 
 ----
 
-> I'll be streaming live on http://X.com tomorrow at 7pm CEST (sunset in Amsterdam, 1pm EDT, 11am PDT) on the 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis. Join me for a moment of silence &amp; discussion. https://twitter.com/ChristopherA/status/1770857165848244592
+> I'll be streaming live on [http://X.com](http://X.com) tomorrow at 7pm CEST (sunset in Amsterdam, 1pm EDT, 11am PDT) on the 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis. Join me for a moment of silence &amp; discussion. [https://twitter.com/ChristopherA/status/1770857165848244592](https://twitter.com/ChristopherA/status/1770857165848244592)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Mar 26 15:51:08 +0000 2024](https://twitter.com/ChristopherA/status/1772652516674551849)
 
 ----
 
-> I've posted more specific details about the attempt, 81 years ago today, by the Dutch Resistance in WWII destroy the Civil Archives and population registry, which was led by the Amsterdam LGBT+ community to protect the Jews and other undesirables: https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/ https://twitter.com/ChristopherA/status/1770857163323224477
+> I've posted more specific details about the attempt, 81 years ago today, by the Dutch Resistance in WWII destroy the Civil Archives and population registry, which was led by the Amsterdam LGBT+ community to protect the Jews and other undesirables: [https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/](https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/) [https://twitter.com/ChristopherA/status/1770857163323224477](https://twitter.com/ChristopherA/status/1770857163323224477)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 16:48:58 +0000 2024](https://twitter.com/ChristopherA/status/1773029457680359759)
 
@@ -278,7 +278,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177100184637
 
 Replying to [@mer__edith and @WebDevLaw](https://twitter.com/mer__edith/status/1770868615979442280)
 
-> Laura “Lau” Mazirel, an advocate of LGBT+ &amp; Romani “Gypsy” rights, visited Willem Arondeus in prison not long before his execution. He had only one request to make of her: “tell the world that gays are no less courageous than anyone else.” https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/
+> Laura “Lau” Mazirel, an advocate of LGBT+ &amp; Romani “Gypsy” rights, visited Willem Arondeus in prison not long before his execution. He had only one request to make of her: “tell the world that gays are no less courageous than anyone else.” [https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/](https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 17:40:54 +0000 2024](https://twitter.com/ChristopherA/status/1773042525273473140)
 
@@ -290,7 +290,7 @@ Replying to [@mer__edith and @WebDevLaw](https://twitter.com/mer__edith/status/1
 
 ----
 
-> Join me now LIVE in #Foremembrance, to commemorate and offer a moment of silence on this 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis. The future of digital identity lies in our hands. https://twitter.com/i/broadcasts/1MnxnMLyEPBJO
+> Join me now LIVE in #Foremembrance, to commemorate and offer a moment of silence on this 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis. The future of digital identity lies in our hands. [https://twitter.com/i/broadcasts/1MnxnMLyEPBJO](https://twitter.com/i/broadcasts/1MnxnMLyEPBJO)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 18:00:00 +0000 2024](https://twitter.com/ChristopherA/status/1773047332923408733)
 
@@ -298,19 +298,19 @@ Replying to [@mer__edith and @WebDevLaw](https://twitter.com/mer__edith/status/1
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773047332923408733)
 
-> We will move to Zoom afterwards (~10m after the hour) at https://us02web.zoom.us/s/84797789485
+> We will move to Zoom afterwards (~10m after the hour) at [https://us02web.zoom.us/s/84797789485](https://us02web.zoom.us/s/84797789485)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 18:00:28 +0000 2024](https://twitter.com/ChristopherA/status/1773047450263003291)
 
 ----
 
-> We are in zoom live NOW, if you would like to talk about the #Foremembrance story, digital identity and human rights, etc. https://us02web.zoom.us/s/84797789485
+> We are in zoom live NOW, if you would like to talk about the #Foremembrance story, digital identity and human rights, etc. [https://us02web.zoom.us/s/84797789485](https://us02web.zoom.us/s/84797789485)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 18:17:40 +0000 2024](https://twitter.com/ChristopherA/status/1773051779896254821)
 
 ----
 
-> A video (11m) of #Foremembrance and the moment-of-silence commemorating the 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis, is now available at https://www.youtube.com/watch?v=R9KuIlAg4wg
+> A video (11m) of #Foremembrance and the moment-of-silence commemorating the 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis, is now available at [https://www.youtube.com/watch?v=R9KuIlAg4wg](https://www.youtube.com/watch?v=R9KuIlAg4wg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 20:20:36 +0000 2024](https://twitter.com/ChristopherA/status/1773082717564862811)
 
@@ -318,13 +318,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177304733292
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773082717564862811)
 
-> Original thread: https://twitter.com/ChristopherA/status/1770857165848244592
+> Original thread: [https://twitter.com/ChristopherA/status/1770857165848244592](https://twitter.com/ChristopherA/status/1770857165848244592)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 20:20:37 +0000 2024](https://twitter.com/ChristopherA/status/1773082719125156205)
 
 ----
 
-> If this bill has legs it would be quite concerning. https://twitter.com/jess_miers/status/1772792624925303275
+> If this bill has legs it would be quite concerning. [https://twitter.com/jess_miers/status/1772792624925303275](https://twitter.com/jess_miers/status/1772792624925303275)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 06:03:31 +0000 2024](https://twitter.com/ChristopherA/status/1773229410151264294)
 
@@ -336,7 +336,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177308271756
 
 ----
 
-> 🔎 “The right is fighting to take control of these platforms, while liberals and some on the left are fighting to expand vectors of platform control, without thinking hard enough about who will wield this power and who is likely to get hurt.” — @mer__edith https://twitter.com/mer__edith/status/1773344682375852408
+> 🔎 “The right is fighting to take control of these platforms, while liberals and some on the left are fighting to expand vectors of platform control, without thinking hard enough about who will wield this power and who is likely to get hurt.” — @mer__edith [https://twitter.com/mer__edith/status/1773344682375852408](https://twitter.com/mer__edith/status/1773344682375852408)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 15:54:08 +0000 2024](https://twitter.com/ChristopherA/status/1773378043941421417)
 
@@ -354,13 +354,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177304733292
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773389950693585000)
 
-> I'm still puzzling on how best to tell Carmille's story, as some details have been lost, and there are still questions. Two links, and one book, in particular I have used as sources: https://daily.jstor.org/wwii-and-the-first-ethical-hacker/; https://muse.jhu.edu/pub/1/oa_monograph/chapter/70972; "A Quiet Hero" by Dwight Harshbarge
+> I'm still puzzling on how best to tell Carmille's story, as some details have been lost, and there are still questions. Two links, and one book, in particular I have used as sources: [https://daily.jstor.org/wwii-and-the-first-ethical-hacker/;](https://daily.jstor.org/wwii-and-the-first-ethical-hacker/;) [https://muse.jhu.edu/pub/1/oa_monograph/chapter/70972;](https://muse.jhu.edu/pub/1/oa_monograph/chapter/70972;) "A Quiet Hero" by Dwight Harshbarge
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 16:41:27 +0000 2024](https://twitter.com/ChristopherA/status/1773389953893839108)
 
 ----
 
-> Cellular data used to correlate visitors to Epstein's island demonstrates the double-edged sword of surveillance tech. While it can expose wrongdoing, it raises critical #RightToPrivacy concerns for everyday citizens. How do we balance the need for justice with #FreedomToAssemble… https://twitter.com/WIRED/status/1773304396400545947
+> Cellular data used to correlate visitors to Epstein's island demonstrates the double-edged sword of surveillance tech. While it can expose wrongdoing, it raises critical #RightToPrivacy concerns for everyday citizens. How do we balance the need for justice with #FreedomToAssemble… [https://twitter.com/WIRED/status/1773304396400545947](https://twitter.com/WIRED/status/1773304396400545947)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 20:24:39 +0000 2024](https://twitter.com/ChristopherA/status/1773446122964717939)
 
@@ -384,13 +384,13 @@ Replying to [@clayforsberg](https://twitter.com/clayforsberg/status/177345476763
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680107380048144)
 
-> The presentation will be by @jesseposner, Senior Blockchain Engineer at Block, who is working on the secp/ZKP FROST project [2/8] https://github.com/BlockstreamResearch/secp256k1-zkp/pull/138
+> The presentation will be by @jesseposner, Senior Blockchain Engineer at Block, who is working on the secp/ZKP FROST project [2/8] [https://github.com/BlockstreamResearch/secp256k1-zkp/pull/138](https://github.com/BlockstreamResearch/secp256k1-zkp/pull/138)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:04 +0000 2024](https://twitter.com/ChristopherA/status/1774680108927742113)
 
 ----
 
-> Want to know more about FROST, the Schnorr signature scheme that enables threshold sigs and more? @BlockchainComns will have an online presentation this Wednesday, April 3rd at 10am PT. [1/8] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md
+> Want to know more about FROST, the Schnorr signature scheme that enables threshold sigs and more? @BlockchainComns will have an online presentation this Wednesday, April 3rd at 10am PT. [1/8] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:04 +0000 2024](https://twitter.com/ChristopherA/status/1774680107380048144)
 
@@ -398,7 +398,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177468010738
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680112304103599)
 
-> It also leverages VSS (Verifiable Secret Sharing), which is useful in other ways as it allows you to verify the existence of backup shares without the risks of reconstructing then. [5/8] https://developer.blockchaincommons.com/ckm/
+> It also leverages VSS (Verifiable Secret Sharing), which is useful in other ways as it allows you to verify the existence of backup shares without the risks of reconstructing then. [5/8] [https://developer.blockchaincommons.com/ckm/](https://developer.blockchaincommons.com/ckm/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:05 +0000 2024](https://twitter.com/ChristopherA/status/1774680113658929232)
 
@@ -414,7 +414,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177468011076
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680108927742113)
 
-> FROST is a massive advance in cryptographic technology, in particular for Bitcoin as supports signature aggregation, where a multisig and a single sig look identical. [3/8] https://developer.blockchaincommons.com/frost/
+> FROST is a massive advance in cryptographic technology, in particular for Bitcoin as supports signature aggregation, where a multisig and a single sig look identical. [3/8] [https://developer.blockchaincommons.com/frost/](https://developer.blockchaincommons.com/frost/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:05 +0000 2024](https://twitter.com/ChristopherA/status/1774680110760611905)
 
@@ -422,7 +422,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177468010892
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680117207257291)
 
-> Become a sponsor of @BlockchainComns to ensure our continued work in toward #SmartCustody for end-users and our support for digital-asset wallets developers. We need your ongoing help! [8/8] https://github.com/sponsors/BlockchainCommons
+> Become a sponsor of @BlockchainComns to ensure our continued work in toward #SmartCustody for end-users and our support for digital-asset wallets developers. We need your ongoing help! [8/8] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:06 +0000 2024](https://twitter.com/ChristopherA/status/1774680118742438018)
 
@@ -430,7 +430,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177468011720
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680115152040199)
 
-> Sign up for our Gordian Developers list to receive announcements of all of our Bitcoin developer an digital-asset wallet developer focused events. [7/8] https://www.blockchaincommons.com/subscribe/
+> Sign up for our Gordian Developers list to receive announcements of all of our Bitcoin developer an digital-asset wallet developer focused events. [7/8] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:06 +0000 2024](https://twitter.com/ChristopherA/status/1774680117207257291)
 
@@ -438,6 +438,6 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/177468011515
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680113658929232)
 
-> If you're a wallet developer, or just interested in the future of Schnorr for Bitcoin, join us this Wednesday April 3rd at 10am PT (1pm ET, 7pm CET) for a presentation that explains all. [6/8] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md
+> If you're a wallet developer, or just interested in the future of Schnorr for Bitcoin, join us this Wednesday April 3rd at 10am PT (1pm ET, 7pm CET) for a presentation that explains all. [6/8] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:06 +0000 2024](https://twitter.com/ChristopherA/status/1774680115152040199)
