--- a/_tweets-md/2024/2024-05-01-tweets.md
+++ b/_tweets-md/2024/2024-05-01-tweets.md
@@ -10,7 +10,7 @@ time:  23:59:59 +0000
 
 ----
 
-> @sim_kern you might be interested in a related story of the Frenchman René Camille, who perhaps saved 100K Jews in WWII: https://www.lifewithalacrity.com/article/echoes-history/
+> @sim_kern you might be interested in a related story of the Frenchman René Camille, who perhaps saved 100K Jews in WWII: [https://www.lifewithalacrity.com/article/echoes-history/](https://www.lifewithalacrity.com/article/echoes-history/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 01:07:29 +0000 2024](https://twitter.com/ChristopherA/status/1788737589467648260)
 
@@ -46,7 +46,7 @@ Replying to [@DefuseSec](https://twitter.com/DefuseSec/status/178844097140515244
 
 ----
 
-> This DAITA open-source project is interesting and addresses a concern that I’ve had for some time with traffic through Tor exit nodes. It adds anti-correlation features such as constant packet sizes, random background traffic and data pattern distortion. Worthy of investigation🕵🏻‍♂️ https://twitter.com/wilderko/status/1788586071531381225
+> This DAITA open-source project is interesting and addresses a concern that I’ve had for some time with traffic through Tor exit nodes. It adds anti-correlation features such as constant packet sizes, random background traffic and data pattern distortion. Worthy of investigation🕵🏻‍♂️ [https://twitter.com/wilderko/status/1788586071531381225](https://twitter.com/wilderko/status/1788586071531381225)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 02:12:22 +0000 2024](https://twitter.com/ChristopherA/status/1788753917477867921)
 
@@ -62,7 +62,7 @@ Replying to [@lopp and @CasaHODL](https://twitter.com/lopp/status/17954359135203
 
 Replying to [@lopp and @CasaHODL](https://twitter.com/lopp/status/1795748624233877819)
 
-> We’ve been working with multiple wallet vendors on this. See our overview of benefits of our approach at https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md — code fully demonstrating this in multiple wallets is in progress this summer.
+> We’ve been working with multiple wallet vendors on this. See our overview of benefits of our approach at [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md) — code fully demonstrating this in multiple wallets is in progress this summer.
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 29 19:58:02 +0000 2024](https://twitter.com/ChristopherA/status/1795907471841915207)
 
