--- a/_tweets-md/2024/2024-07-01-tweets.md
+++ b/_tweets-md/2024/2024-07-01-tweets.md
@@ -4,7 +4,7 @@ date: "2024-07-31"
 time:  23:59:59 +0000
 ---
 
-> Today's Gordian Wallet Community meeting focused on Gordian Sealed Transaction Protocol (GSTP), a secure, transport-agnostic request/response system that supports Encrypted State Continuations (ESC) [1/17]. https://www.youtube.com/watch?v=QnH14LkJOnI
+> Today's Gordian Wallet Community meeting focused on Gordian Sealed Transaction Protocol (GSTP), a secure, transport-agnostic request/response system that supports Encrypted State Continuations (ESC) [1/17]. [https://www.youtube.com/watch?v=QnH14LkJOnI](https://www.youtube.com/watch?v=QnH14LkJOnI)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:32:56 +0000 2024](https://twitter.com/ChristopherA/status/1811438537272873199)
 
@@ -44,7 +44,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143855275
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438557011353658)
 
-> Our video has an extensive description of how all the pieces of GSTP work together. [6/17] https://www.youtube.com/watch?v=QnH14LkJOnI
+> Our video has an extensive description of how all the pieces of GSTP work together. [6/17] [https://www.youtube.com/watch?v=QnH14LkJOnI](https://www.youtube.com/watch?v=QnH14LkJOnI)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:02 +0000 2024](https://twitter.com/ChristopherA/status/1811438562627461264)
 
@@ -52,7 +52,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143855701
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438562627461264)
 
-> The full specification for the Gordian Sealed Transaction Protocol (GSTP) can be found in one of Blockchain Commons' Research Papers. [7/17] https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2023-014-gstp.md
+> The full specification for the Gordian Sealed Transaction Protocol (GSTP) can be found in one of Blockchain Commons' Research Papers. [7/17] [https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2023-014-gstp.md](https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2023-014-gstp.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:04 +0000 2024](https://twitter.com/ChristopherA/status/1811438568189169825)
 
@@ -60,7 +60,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143856262
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438568189169825)
 
-> GSTP builds on Blockchain Commons' Gordian Envelope "Smart Document" system that is built to allow for the secure, safe, holder-controllable storage of sensitive data. [8/17] https://developer.blockchaincommons.com/envelope/
+> GSTP builds on Blockchain Commons' Gordian Envelope "Smart Document" system that is built to allow for the secure, safe, holder-controllable storage of sensitive data. [8/17] [https://developer.blockchaincommons.com/envelope/](https://developer.blockchaincommons.com/envelope/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:06 +0000 2024](https://twitter.com/ChristopherA/status/1811438576208589184)
 
@@ -68,7 +68,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143856818
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438576208589184)
 
-> Our GSTP release this month was only possible due to the financial support of @FOUNDATIONdvcs as a Resarch Sponsor. Thank you! [9/17] https://github.com/sponsors/BlockchainCommons
+> Our GSTP release this month was only possible due to the financial support of @FOUNDATIONdvcs as a Resarch Sponsor. Thank you! [9/17] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:07 +0000 2024](https://twitter.com/ChristopherA/status/1811438583099850977)
 
@@ -76,7 +76,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143857620
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438583099850977)
 
-> This week's presentation on GSTP was part of our monthly Gordian meeting, a regular meeting for digital asset and identity wallet developers &amp; other parties interested in the field. [10/17] https://www.youtube.com/watch?v=xLCuvJYnTFs
+> This week's presentation on GSTP was part of our monthly Gordian meeting, a regular meeting for digital asset and identity wallet developers &amp; other parties interested in the field. [10/17] [https://www.youtube.com/watch?v=xLCuvJYnTFs](https://www.youtube.com/watch?v=xLCuvJYnTFs)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:10 +0000 2024](https://twitter.com/ChristopherA/status/1811438592939688397)
 
@@ -92,7 +92,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143859293
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438601156362273)
 
-> Seedtool-CLI-Rust is our newest. It supports the creation, recovery, reconstruction, and transformation of seeds. Just install the seedtool-cli crate for Rust! [12/17] https://github.com/BlockchainCommons/seedtool-cli-rust
+> Seedtool-CLI-Rust is our newest. It supports the creation, recovery, reconstruction, and transformation of seeds. Just install the seedtool-cli crate for Rust! [12/17] [https://github.com/BlockchainCommons/seedtool-cli-rust](https://github.com/BlockchainCommons/seedtool-cli-rust)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:13 +0000 2024](https://twitter.com/ChristopherA/status/1811438606755750129)
 
@@ -100,7 +100,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143860115
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438606755750129)
 
-> We've also released a comprehensive user guide for Seedtool-CLI-Rust that discusses all of its capabilities (and why to use them!) [13/17] https://github.com/BlockchainCommons/seedtool-cli-rust/blob/master/MANUAL.md
+> We've also released a comprehensive user guide for Seedtool-CLI-Rust that discusses all of its capabilities (and why to use them!) [13/17] [https://github.com/BlockchainCommons/seedtool-cli-rust/blob/master/MANUAL.md](https://github.com/BlockchainCommons/seedtool-cli-rust/blob/master/MANUAL.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:15 +0000 2024](https://twitter.com/ChristopherA/status/1811438613546283102)
 
@@ -108,7 +108,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143860675
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438613546283102)
 
-> Our other CLI is an update of Envelope-CLI-Rust, which demonstrates some of the larger scale capabilities of Gordian Envelope, particularly its ability to elide data while retaining the validity of any signatures. That's the bc-envelope-cli crate. [14/17] https://github.com/BlockchainCommons/bc-envelope-cli-rust
+> Our other CLI is an update of Envelope-CLI-Rust, which demonstrates some of the larger scale capabilities of Gordian Envelope, particularly its ability to elide data while retaining the validity of any signatures. That's the bc-envelope-cli crate. [14/17] [https://github.com/BlockchainCommons/bc-envelope-cli-rust](https://github.com/BlockchainCommons/bc-envelope-cli-rust)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:16 +0000 2024](https://twitter.com/ChristopherA/status/1811438618415947830)
 
@@ -116,7 +116,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143861354
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438618415947830)
 
-> That was this month's Blockchain Commons meeting! Sign up for the Gordian Developer announcements-only mailing list to get info on every monthly meeting. In August we'll have a presentation, then discussion, about BIP-85! [15/17] https://www.blockchaincommons.com/subscribe/
+> That was this month's Blockchain Commons meeting! Sign up for the Gordian Developer announcements-only mailing list to get info on every monthly meeting. In August we'll have a presentation, then discussion, about BIP-85! [15/17] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:17 +0000 2024](https://twitter.com/ChristopherA/status/1811438624032145585)
 
@@ -124,7 +124,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143861841
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438624032145585)
 
-> We are seeking patronage to support further development of these open wallet and infrastructure tools! If you would like to join @FOUNDATIONdvcs as a Research Patron to help us focus on some facet of open wallet infrastructure, let us know! [16/17] https://github.com/sponsor/BlockchainCommons
+> We are seeking patronage to support further development of these open wallet and infrastructure tools! If you would like to join @FOUNDATIONdvcs as a Research Patron to help us focus on some facet of open wallet infrastructure, let us know! [16/17] [https://github.com/sponsor/BlockchainCommons](https://github.com/sponsor/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:18 +0000 2024](https://twitter.com/ChristopherA/status/1811438628524179538)
 
@@ -132,7 +132,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181143862403
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438628524179538)
 
-> TL;DR: GSTP. Gordian Sealed Transaction Protocol. Secure, transport-agnostic, encrypted state continuation. Looking toward the future for the secure storage &amp; communication of digital assets and secure private identity. [17/17] https://www.youtube.com/watch?v=QnH14LkJOnI
+> TL;DR: GSTP. Gordian Sealed Transaction Protocol. Secure, transport-agnostic, encrypted state continuation. Looking toward the future for the secure storage &amp; communication of digital assets and secure private identity. [17/17] [https://www.youtube.com/watch?v=QnH14LkJOnI](https://www.youtube.com/watch?v=QnH14LkJOnI)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:19 +0000 2024](https://twitter.com/ChristopherA/status/1811438633150509530)
 
@@ -170,7 +170,7 @@ Replying to [@RuffTimo, @CnftMoon, @IOHK_Charles, @elonmusk, @drummondreed and @
 
 ----
 
-> The Q2 2024 report is out from @blockchaincomns. There's info on our work on Gordian Envelope, dCBOR, SSH, Bitcoin privacy, and lots more! Take a look! [1/12] https://twitter.com/BlockchainComns/status/1816189610235744668
+> The Q2 2024 report is out from @blockchaincomns. There's info on our work on Gordian Envelope, dCBOR, SSH, Bitcoin privacy, and lots more! Take a look! [1/12] [https://twitter.com/BlockchainComns/status/1816189610235744668](https://twitter.com/BlockchainComns/status/1816189610235744668)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:52 +0000 2024](https://twitter.com/ChristopherA/status/1816191085842243951)
 
@@ -178,7 +178,7 @@ Replying to [@RuffTimo, @CnftMoon, @IOHK_Charles, @elonmusk, @drummondreed and @
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191089008914856)
 
-> Envelope is built on deterministic CBOR (dCBOR), which @BlockchainComns also talks about in the quarterly report. The biggest news? Increased uptake of dCBOR by developers and CBOR experts. [4/12] https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/
+> Envelope is built on deterministic CBOR (dCBOR), which @BlockchainComns also talks about in the quarterly report. The biggest news? Increased uptake of dCBOR by developers and CBOR experts. [4/12] [https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/](https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:53 +0000 2024](https://twitter.com/ChristopherA/status/1816191090468479095)
 
@@ -186,7 +186,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619108900
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191087553438016)
 
-> But also take a look at our Request/Response video, which demonstrates some of the more advanced capabilities of Gordian Envelope, which can automate processes by taking out unnecessary human intervention, and actually increase security! [3/12] https://www.youtube.com/watch?v=ZXDf2cmfX1k
+> But also take a look at our Request/Response video, which demonstrates some of the more advanced capabilities of Gordian Envelope, which can automate processes by taking out unnecessary human intervention, and actually increase security! [3/12] [https://www.youtube.com/watch?v=ZXDf2cmfX1k](https://www.youtube.com/watch?v=ZXDf2cmfX1k)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:53 +0000 2024](https://twitter.com/ChristopherA/status/1816191089008914856)
 
@@ -194,7 +194,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619108755
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191085842243951)
 
-> Gordian Envelope is Blockchain Commons' foundational "Smart Document" system. Some of our work this quarter was to better explain it in a new executive summary. [2/12] https://developer.blockchaincommons.com/envelope/summary/
+> Gordian Envelope is Blockchain Commons' foundational "Smart Document" system. Some of our work this quarter was to better explain it in a new executive summary. [2/12] [https://developer.blockchaincommons.com/envelope/summary/](https://developer.blockchaincommons.com/envelope/summary/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:53 +0000 2024](https://twitter.com/ChristopherA/status/1816191087553438016)
 
@@ -202,7 +202,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619108584
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191093480005803)
 
-> One of our biggest expansions this quarter was into SSH. We're working on making it more secure to distribute software. Our first step has been to update the Envelope CLI to support SSH signing. [7/12] https://github.com/BlockchainCommons/bc-envelope-cli-rust
+> One of our biggest expansions this quarter was into SSH. We're working on making it more secure to distribute software. Our first step has been to update the Envelope CLI to support SSH signing. [7/12] [https://github.com/BlockchainCommons/bc-envelope-cli-rust](https://github.com/BlockchainCommons/bc-envelope-cli-rust)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:54 +0000 2024](https://twitter.com/ChristopherA/status/1816191095107432581)
 
@@ -210,7 +210,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109348
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191091970039873)
 
-> Also at our Gordian Developer Meetings, @bitgould talked about Bitcoin's PayJoin and its future. [6/12] https://www.youtube.com/watch?v=oMGL-Y498ZQ
+> Also at our Gordian Developer Meetings, @bitgould talked about Bitcoin's PayJoin and its future. [6/12] [https://www.youtube.com/watch?v=oMGL-Y498ZQ](https://www.youtube.com/watch?v=oMGL-Y498ZQ)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:54 +0000 2024](https://twitter.com/ChristopherA/status/1816191093480005803)
 
@@ -218,7 +218,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109197
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191090468479095)
 
-> Community is important! Blockchain Commons is creating interoperable specs for use by everyone. We were thus thrilled to have a few presentations from the community this quarter. @jesseposner talked about FROST, and its usefulness for Bitcoin. [5/12] https://www.youtube.com/watch?v=uCM8dDql6oo
+> Community is important! Blockchain Commons is creating interoperable specs for use by everyone. We were thus thrilled to have a few presentations from the community this quarter. @jesseposner talked about FROST, and its usefulness for Bitcoin. [5/12] [https://www.youtube.com/watch?v=uCM8dDql6oo](https://www.youtube.com/watch?v=uCM8dDql6oo)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:54 +0000 2024](https://twitter.com/ChristopherA/status/1816191091970039873)
 
@@ -226,7 +226,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109046
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191097879822530)
 
-> But there was so much more. Take a look at the quarterly report for design patterns, DID futures, graphs in Envelope, and all of the other stuff I missed! [10/12] https://www.blockchaincommons.com/quarterlies/Q2-2024/
+> But there was so much more. Take a look at the quarterly report for design patterns, DID futures, graphs in Envelope, and all of the other stuff I missed! [10/12] [https://www.blockchaincommons.com/quarterlies/Q2-2024/](https://www.blockchaincommons.com/quarterlies/Q2-2024/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:55 +0000 2024](https://twitter.com/ChristopherA/status/1816191099322732986)
 
@@ -234,7 +234,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109787
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191096537641427)
 
-> I wrote a "musing" article about our practice of Minimum Viable Architecture, and why it's a better development methodology than MVPs. It is another highlight of the quarter. [9/12] https://www.blockchaincommons.com/musings/musings-mva/
+> I wrote a "musing" article about our practice of Minimum Viable Architecture, and why it's a better development methodology than MVPs. It is another highlight of the quarter. [9/12] [https://www.blockchaincommons.com/musings/musings-mva/](https://www.blockchaincommons.com/musings/musings-mva/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:55 +0000 2024](https://twitter.com/ChristopherA/status/1816191097879822530)
 
@@ -242,7 +242,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109653
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191095107432581)
 
-> We also did some major work on the Gordian Sealed Transaction Protocol (GSTP), which uses Envelopes for secure communication with a new and innovative system we call Encrypted State Continuations (ESC). Take a look at the video! [8/12] https://www.youtube.com/watch?v=QnH14LkJOnI
+> We also did some major work on the Gordian Sealed Transaction Protocol (GSTP), which uses Envelopes for secure communication with a new and innovative system we call Encrypted State Continuations (ESC). Take a look at the video! [8/12] [https://www.youtube.com/watch?v=QnH14LkJOnI](https://www.youtube.com/watch?v=QnH14LkJOnI)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:55 +0000 2024](https://twitter.com/ChristopherA/status/1816191096537641427)
 
@@ -250,7 +250,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109510
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191100941656133)
 
-> And please become a sponsor to support the continued development of private, resilient, open, and independent digital-asset systems. [12/12] https://github.com/sponsors/BlockchainCommons
+> And please become a sponsor to support the continued development of private, resilient, open, and independent digital-asset systems. [12/12] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:56 +0000 2024](https://twitter.com/ChristopherA/status/1816191102359330898)
 
@@ -258,7 +258,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619110094
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191099322732986)
 
-> Subscribe to the Gordian Developers announcement-only mailing list so that you can be notified of our latest feature presentations and wallet developer conversations. [11/12] https://www.blockchaincommons.com/subscribe/
+> Subscribe to the Gordian Developers announcement-only mailing list so that you can be notified of our latest feature presentations and wallet developer conversations. [11/12] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:56 +0000 2024](https://twitter.com/ChristopherA/status/1816191100941656133)
 
@@ -266,7 +266,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181619109932
 
 > RT @gosu128: Amazing new concept for Web3. Worth reading.   
 >   
-> Musings of a Trust Architect: Minimum Viable Architecture (MVA) https://t.co/Cd…
+> Musings of a Trust Architect: Minimum Viable Architecture (MVA) [https://t.co/Cd…](https://t.co/Cd…)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:25:10 +0000 2024](https://twitter.com/ChristopherA/status/1816192920829190573)
 
@@ -281,7 +281,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651720929
 ----
 
 > I'm pleased to hear that @Ledger is now officially offers an alternative to Ledger Recover with an SSKR (Sharded Secret Key Reconstruction) app. It supports user's to be the sole keepers of their seed phrase, but splits into shares for reliability.  
-> https://www.ledger.com/blog/seed-tool-app
+> [https://www.ledger.com/blog/seed-tool-app](https://www.ledger.com/blog/seed-tool-app)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:46 +0000 2024](https://twitter.com/ChristopherA/status/1816517209298268532)
 
@@ -289,7 +289,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651720929
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816517211990942101)
 
-> These standards for wallet interoperability can only happen with your financial support. If self-sovereign recovery using SSKR secret shares is important to you, sponsor us at https://github.com/sponsors/blockchaincommons
+> These standards for wallet interoperability can only happen with your financial support. If self-sovereign recovery using SSKR secret shares is important to you, sponsor us at [https://github.com/sponsors/blockchaincommons](https://github.com/sponsors/blockchaincommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:47 +0000 2024](https://twitter.com/ChristopherA/status/1816517213442179447)
 
@@ -297,7 +297,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651721199
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816517210715885707)
 
-> With SSKR being available to more than 6 million hardware devices, I hope that more wallets will offer the interoperable SSKR standard as an alternative to backup and restore cryptographic seeds. For more details see: https://developer.blockchaincommons.com/sskr/
+> With SSKR being available to more than 6 million hardware devices, I hope that more wallets will offer the interoperable SSKR standard as an alternative to backup and restore cryptographic seeds. For more details see: [https://developer.blockchaincommons.com/sskr/](https://developer.blockchaincommons.com/sskr/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:47 +0000 2024](https://twitter.com/ChristopherA/status/1816517211990942101)
 
@@ -305,13 +305,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651721071
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519166557630840)
 
-> At our August Gordian Developers Meeting (August 7th, 10am PDT), BIP-85 champion Aneesh Karve @akarve will give a feature presentation on BIP-85. If you're a wallet developer, or just interested in Bitcoin, just us! [2/10] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+> At our August Gordian Developers Meeting (August 7th, 10am PDT), BIP-85 champion Aneesh Karve @akarve will give a feature presentation on BIP-85. If you're a wallet developer, or just interested in Bitcoin, just us! [2/10] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:33 +0000 2024](https://twitter.com/ChristopherA/status/1816519168294027329)
 
 ----
 
-> How do you create, manage &amp; store digital-asset seeds in a way that's secure &amp; resilient? That's a question that @BlockchainComns has worked on since the start &amp; we'd like to talk about a useful tool at our meeting this August: BIP-85. [1/10] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+> How do you create, manage &amp; store digital-asset seeds in a way that's secure &amp; resilient? That's a question that @BlockchainComns has worked on since the start &amp; we'd like to talk about a useful tool at our meeting this August: BIP-85. [1/10] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:33 +0000 2024](https://twitter.com/ChristopherA/status/1816519166557630840)
 
@@ -335,7 +335,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651916971
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519168294027329)
 
-> The BIP-85 cheekily states: "One Seed to rule them all, One Key to find them, One Path to bring them all, And in cryptography bind them." [3/10] https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki#abstract
+> The BIP-85 cheekily states: "One Seed to rule them all, One Key to find them, One Path to bring them all, And in cryptography bind them." [3/10] [https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki#abstract](https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki#abstract)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:34 +0000 2024](https://twitter.com/ChristopherA/status/1816519169711718809)
 
@@ -359,7 +359,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651917398
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519172551331876)
 
-> More generally, August's Gordian Developers Meeting will cover a variety of topics about seeds, which are the heart of protecting your digital assets. We'll talk about about backup methods such as SSKR, the use of metadata, and more! [6/10] https://x.com/ChristopherA/status/1816517209298268532
+> More generally, August's Gordian Developers Meeting will cover a variety of topics about seeds, which are the heart of protecting your digital assets. We'll talk about about backup methods such as SSKR, the use of metadata, and more! [6/10] [https://x.com/ChristopherA/status/1816517209298268532](https://x.com/ChristopherA/status/1816517209298268532)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:35 +0000 2024](https://twitter.com/ChristopherA/status/1816519173981585837)
 
@@ -367,7 +367,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651917255
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519180113576303)
 
-> Support Blockchain Commons' work in support cryptographic wallet interoperability by becoming a GitHub patron. Every sponsorship, big or small, helps to demonstrate the importance of our work. [10/10] https://github.com/sponsors/BlockchainCommons
+> Support Blockchain Commons' work in support cryptographic wallet interoperability by becoming a GitHub patron. Every sponsorship, big or small, helps to demonstrate the importance of our work. [10/10] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:36 +0000 2024](https://twitter.com/ChristopherA/status/1816519181845823639)
 
@@ -375,7 +375,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651918011
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519178641375681)
 
-> Subscribe to Blockchain Commons' announcements-only mailing list for wallet developers to see the monthly announcements for our meetings and feature presentations. [9/10] https://www.blockchaincommons.com/subscribe/
+> Subscribe to Blockchain Commons' announcements-only mailing list for wallet developers to see the monthly announcements for our meetings and feature presentations. [9/10] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:36 +0000 2024](https://twitter.com/ChristopherA/status/1816519180113576303)
 
@@ -383,7 +383,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651917864
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519177303433503)
 
-> Click through to our August Meeting page to download an ICS calendar file to put the BIP-85 &amp; Seed meeting on your calendar. [8/10] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+> Click through to our August Meeting page to download an ICS calendar file to put the BIP-85 &amp; Seed meeting on your calendar. [8/10] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:36 +0000 2024](https://twitter.com/ChristopherA/status/1816519178641375681)
 
@@ -391,7 +391,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181651917730
 
 Replying to [@nvk](https://twitter.com/nvk/status/1817892967165661490)
 
-> Take a look at the benefits of Request/Response for UX (and also security): https://youtu.be/ZXDf2cmfX1k
+> Take a look at the benefits of Request/Response for UX (and also security): [https://youtu.be/ZXDf2cmfX1k](https://youtu.be/ZXDf2cmfX1k)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 30 01:23:51 +0000 2024](https://twitter.com/ChristopherA/status/1818095127627489749)
 
@@ -399,7 +399,7 @@ Replying to [@nvk](https://twitter.com/nvk/status/1817892967165661490)
 
 Replying to [@nvk](https://twitter.com/ChristopherA/status/1818095127627489749)
 
-> https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md 
+> [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md) 
 > 
 > ![1818096833199235519-GTstb0xboAEV6Pf]({{ site.url }}{{ site.baseurl }}/assets/images/media/1818096833199235519-GTstb0xboAEV6Pf.webp)
 
