--- a/_tweets-md/2024/2024-09-01-tweets.md
+++ b/_tweets-md/2024/2024-09-01-tweets.md
@@ -4,7 +4,7 @@ date: "2024-09-30"
 time:  23:59:59 +0000
 ---
 
-> The discovery of an elliptic curve with rank 29 isn't just a mathematical curiosity—it's a may be game-changer! Higher rank elliptic curves mean more rational points, which are crucial for cryptography, offering new possibilities for secure key generation. 🔐 1/3 https://twitter.com/dujella1/status/1829272772343898176
+> The discovery of an elliptic curve with rank 29 isn't just a mathematical curiosity—it's a may be game-changer! Higher rank elliptic curves mean more rational points, which are crucial for cryptography, offering new possibilities for secure key generation. 🔐 1/3 [https://twitter.com/dujella1/status/1829272772343898176](https://twitter.com/dujella1/status/1829272772343898176)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 02 20:04:03 +0000 2024](https://twitter.com/ChristopherA/status/1830698222903521394)
 
@@ -122,7 +122,7 @@ Replying to [@DanielKrawisz](https://twitter.com/ChristopherA/status/18307856609
 
 Replying to [@dujella1](https://twitter.com/dujella1/status/1829272772343898176)
 
-> I’d be interested in your thoughts on my spitballing of what might be possible with high rank ECC: https://twitter.com/ChristopherA/status/1830782342283304982
+> I’d be interested in your thoughts on my spitballing of what might be possible with high rank ECC: [https://twitter.com/ChristopherA/status/1830782342283304982](https://twitter.com/ChristopherA/status/1830782342283304982)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 03 02:02:06 +0000 2024](https://twitter.com/ChristopherA/status/1830788328079380571)
 
@@ -136,7 +136,7 @@ Replying to [@dujella1](https://twitter.com/dujella1/status/1829272772343898176)
 
 Replying to [@MartinShkreli](https://twitter.com/MartinShkreli/status/1830934453700423776)
 
-> How about for any of these ideas? (Thread) https://twitter.com/ChristopherA/status/1830782342283304982
+> How about for any of these ideas? (Thread) [https://twitter.com/ChristopherA/status/1830782342283304982](https://twitter.com/ChristopherA/status/1830782342283304982)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 03 16:14:23 +0000 2024](https://twitter.com/ChristopherA/status/1831002811347394791)
 
@@ -144,7 +144,7 @@ Replying to [@MartinShkreli](https://twitter.com/MartinShkreli/status/1830934453
 
 Replying to [@MartinShkreli](https://twitter.com/ChristopherA/status/1831002811347394791)
 
-> In particular https://x.com/christophera/status/1830784347399692732?s=46&t=ePUcgPP2MpmlY7AiPMPAZg https://twitter.com/ChristopherA/status/1830784347399692732
+> In particular [https://x.com/christophera/status/1830784347399692732?s=46&t=ePUcgPP2MpmlY7AiPMPAZg](https://x.com/christophera/status/1830784347399692732?s=46&t=ePUcgPP2MpmlY7AiPMPAZg) [https://twitter.com/ChristopherA/status/1830784347399692732](https://twitter.com/ChristopherA/status/1830784347399692732)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 03 16:16:01 +0000 2024](https://twitter.com/ChristopherA/status/1831003224859627964)
 
@@ -172,9 +172,9 @@ Replying to [@MartinShkreli](https://twitter.com/ChristopherA/status/18310028113
 
 Replying to [@andrewlu_](https://twitter.com/andrewlu_/status/1836513338605650078)
 
-> We’ve held four virtual events related to this topic (and seeking sponsors to hold more) at http://SiliconSalon.info  
+> We’ve held four virtual events related to this topic (and seeking sponsors to hold more) at [http://SiliconSalon.info](http://SiliconSalon.info)  
 >   
-> Of particular relevance to your question is this presentation from a company trying to come closer to the ideal, and the pitfalls: https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation
+> Of particular relevance to your question is this presentation from a company trying to come closer to the ideal, and the pitfalls: [https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation](https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 20 05:52:23 +0000 2024](https://twitter.com/ChristopherA/status/1837006874992070941)
 
@@ -182,7 +182,7 @@ Replying to [@andrewlu_](https://twitter.com/andrewlu_/status/183651333860565007
 
 Replying to [@PoeticTechUG, @tzhen, @notscottmoore and @_markel___](https://twitter.com/Poetic_Tech/status/1836709145778548851)
 
-> We’ve hosted four virtual workshops on these topics, you should go through some of the history. In particular look at one companies report on the challenges: https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation
+> We’ve hosted four virtual workshops on these topics, you should go through some of the history. In particular look at one companies report on the challenges: [https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation](https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 20 05:57:11 +0000 2024](https://twitter.com/ChristopherA/status/1837008082184065441)
 
@@ -198,7 +198,7 @@ Replying to [@PoeticTechUG, @tzhen, @notscottmoore and @_markel___](https://twit
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345563789385860)
 
-> ChillDKG was presented by @n1ckler. It's all about specifying Distributed Key Generation for use with FROST. The idea of having keys that only exist when machines unite is one of the great security advances of the technology. [3/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=3492s
+> ChillDKG was presented by @n1ckler. It's all about specifying Distributed Key Generation for use with FROST. The idea of having keys that only exist when machines unite is one of the great security advances of the technology. [3/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=3492s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=3492s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:30 +0000 2024](https://twitter.com/ChristopherA/status/1839345565358051391)
 
@@ -206,13 +206,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934556378
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345561985839510)
 
-> The majority of the meeting was focused on presentations from the teams producing cryptographic libraries and related tools that we hope to soon see be used by digital-asset wallets and other services. [2/14] https://developer.blockchaincommons.com/frost/meeting2/#presentation-slides
+> The majority of the meeting was focused on presentations from the teams producing cryptographic libraries and related tools that we hope to soon see be used by digital-asset wallets and other services. [2/14] [https://developer.blockchaincommons.com/frost/meeting2/#presentation-slides](https://developer.blockchaincommons.com/frost/meeting2/#presentation-slides)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:30 +0000 2024](https://twitter.com/ChristopherA/status/1839345563789385860)
 
 ----
 
-> The second FROST Implementers Round Table from @blockchaincomns featured cryptographers and designers talking about the status of their FROST projects and the challenges they're facing. We've published a full record of the event. [1/14] https://developer.blockchaincommons.com/frost/meeting2/
+> The second FROST Implementers Round Table from @blockchaincomns featured cryptographers and designers talking about the status of their FROST projects and the challenges they're facing. We've published a full record of the event. [1/14] [https://developer.blockchaincommons.com/frost/meeting2/](https://developer.blockchaincommons.com/frost/meeting2/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:30 +0000 2024](https://twitter.com/ChristopherA/status/1839345561985839510)
 
@@ -220,7 +220,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934556198
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345567014826451)
 
-> FROST integration into libsecp256k1-zkp was discussed by @jesseposner, and he talked about some intriguing challenges he's run into, such as the danger of script paths and issues with supporting share repair. [5/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=636s
+> FROST integration into libsecp256k1-zkp was discussed by @jesseposner, and he talked about some intriguing challenges he's run into, such as the danger of script paths and issues with supporting share repair. [5/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=636s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=636s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:31 +0000 2024](https://twitter.com/ChristopherA/status/1839345568919044502)
 
@@ -228,7 +228,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934556701
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345565358051391)
 
-> Kulpreet Singh talked about their work on a FROST Federation, which uses a large quorum FROST-based multisig for payments to Bitcoin miners participating in a pool. [4/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=5057s
+> Kulpreet Singh talked about their work on a FROST Federation, which uses a large quorum FROST-based multisig for payments to Bitcoin miners participating in a pool. [4/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=5057s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=5057s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:31 +0000 2024](https://twitter.com/ChristopherA/status/1839345567014826451)
 
@@ -236,7 +236,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934556535
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345572324724765)
 
-> Pacu (@@thecodebuffet) then talked about making the ZF FROST library available to other programming languages courtesy of UniFFI. [8/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=2890s
+> Pacu (@@thecodebuffet) then talked about making the ZF FROST library available to other programming languages courtesy of UniFFI. [8/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=2890s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=2890s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:32 +0000 2024](https://twitter.com/ChristopherA/status/1839345574111494566)
 
@@ -244,7 +244,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934557232
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345570663801082)
 
-> ZF FROST is a fully deployed FROST library in Rust supporting multiple curves courtesy of @ZcashFoundation. Conrado Gouvea (@conradoplg) talked about what's next, including a client and server to make it even more accessible. [7/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=2431s
+> ZF FROST is a fully deployed FROST library in Rust supporting multiple curves courtesy of @ZcashFoundation. Conrado Gouvea (@conradoplg) talked about what's next, including a client and server to make it even more accessible. [7/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=2431s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=2431s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:32 +0000 2024](https://twitter.com/ChristopherA/status/1839345572324724765)
 
@@ -252,7 +252,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934557066
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345568919044502)
 
-> Luke Parker (@kayabaNerve) presented @SeraiDEX FROST, an implementation of FROST for a decentralized exchange. It's another great real-world use case, but Luke also talked about a novel one-round Distributed Key Generation he implemented. [6/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=5628s
+> Luke Parker (@kayabaNerve) presented @SeraiDEX FROST, an implementation of FROST for a decentralized exchange. It's another great real-world use case, but Luke also talked about a novel one-round Distributed Key Generation he implemented. [6/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=5628s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=5628s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:32 +0000 2024](https://twitter.com/ChristopherA/status/1839345570663801082)
 
@@ -260,7 +260,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934556891
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345575705383348)
 
-> We also had brief discussions of a topics such as key formats and VSS compatability in round table discussions. It was a great meeting! If you're working on specifying or implementing FROST, or incorporating it into your wallet, take a look! [10/14] https://developer.blockchaincommons.com/frost/meeting2/
+> We also had brief discussions of a topics such as key formats and VSS compatability in round table discussions. It was a great meeting! If you're working on specifying or implementing FROST, or incorporating it into your wallet, take a look! [10/14] [https://developer.blockchaincommons.com/frost/meeting2/](https://developer.blockchaincommons.com/frost/meeting2/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:33 +0000 2024](https://twitter.com/ChristopherA/status/1839345577466991042)
 
@@ -268,7 +268,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934557570
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345574111494566)
 
-> Finally, @WolfMcNally talked about implementing BIP340 / BIP-341  FROST-compatible signatures in Gordian Envelope. [9/14] https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=8473s
+> Finally, @WolfMcNally talked about implementing BIP340 / BIP-341  FROST-compatible signatures in Gordian Envelope. [9/14] [https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=8473s](https://www.youtube.com/watch?v=VxLTJ_OxGT4&t=8473s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:33 +0000 2024](https://twitter.com/ChristopherA/status/1839345575705383348)
 
@@ -284,7 +284,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934558011
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345577466991042)
 
-> We'll be holding another meeting, focused on helping wallet developers to actually incorporate FROST into their products, on December 4th. Sign up for our Gordian Developers mailing list to receive the invites. [11/14] https://www.blockchaincommons.com/subscribe/
+> We'll be holding another meeting, focused on helping wallet developers to actually incorporate FROST into their products, on December 4th. Sign up for our Gordian Developers mailing list to receive the invites. [11/14] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:34 +0000 2024](https://twitter.com/ChristopherA/status/1839345580117807511)
 
@@ -292,7 +292,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934557746
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345583011828129)
 
-> Are you working to improve the resilience &amp; security of digital assets, or the human rights of people as digital citizens? Work with us at @BlockchainComns! Contribute to our open source projects, attend our Gordian Meetings, and become a sponsor. [14/14] https://www.blockchaincommons.com/subscribe/
+> Are you working to improve the resilience &amp; security of digital assets, or the human rights of people as digital citizens? Work with us at @BlockchainComns! Contribute to our open source projects, attend our Gordian Meetings, and become a sponsor. [14/14] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:35 +0000 2024](https://twitter.com/ChristopherA/status/1839345584559513672)
 
@@ -300,13 +300,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/183934558301
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1839345581623500891)
 
-> Thanks to the Human Rights Foundation (@HRF) for sponsorship of this meeting! We can only do this work to support cross-industry collaboration and interoperability with support from our financial patrons. [13/14] https://github.com/sponsors/BlockchainCommons
+> Thanks to the Human Rights Foundation (@HRF) for sponsorship of this meeting! We can only do this work to support cross-industry collaboration and interoperability with support from our financial patrons. [13/14] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 26 16:45:35 +0000 2024](https://twitter.com/ChristopherA/status/1839345583011828129)
 
 ----
 
-> This is also true for Flash drives. If you are storing critical files (in particular private keys) and that are not powered up or rewritten regularly to refresh them, quantum tunneling in the capacitors will cause bitrot. One expert estimated MTBF of 5 years. https://twitter.com/lauriewired/status/1840798755102380538
+> This is also true for Flash drives. If you are storing critical files (in particular private keys) and that are not powered up or rewritten regularly to refresh them, quantum tunneling in the capacitors will cause bitrot. One expert estimated MTBF of 5 years. [https://twitter.com/lauriewired/status/1840798755102380538](https://twitter.com/lauriewired/status/1840798755102380538)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 30 20:33:11 +0000 2024](https://twitter.com/ChristopherA/status/1840852413173153806)
 
