--- a/_tweets-md/2024/2024-11-01-tweets.md
+++ b/_tweets-md/2024/2024-11-01-tweets.md
@@ -14,7 +14,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185240433737
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1852404336242110955)
 
-> Speaking of identity, I hope you'll also read an article I wrote for #IIW on whether self-sovereign identity (#SSI) #is now failing its foundational aspirations. [3/7] https://www.blockchaincommons.com/musings/musings-ssi-bankruptcy/
+> Speaking of identity, I hope you'll also read an article I wrote for #IIW on whether self-sovereign identity (#SSI) #is now failing its foundational aspirations. [3/7] [https://www.blockchaincommons.com/musings/musings-ssi-bankruptcy/](https://www.blockchaincommons.com/musings/musings-ssi-bankruptcy/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 01 17:36:24 +0000 2024](https://twitter.com/ChristopherA/status/1852404337370378417)
 
@@ -22,13 +22,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185240433624
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1852404335004790964)
 
-> My feature presentation will be on Edge Identifiers &amp; Cliques, a new relational sort of identity that I've written about in recent articles. TL;DR? What if identity were about our connections &amp; communities? [2/7] https://www.blockchaincommons.com/musings/musings-cliques-1/
+> My feature presentation will be on Edge Identifiers &amp; Cliques, a new relational sort of identity that I've written about in recent articles. TL;DR? What if identity were about our connections &amp; communities? [2/7] [https://www.blockchaincommons.com/musings/musings-cliques-1/](https://www.blockchaincommons.com/musings/musings-cliques-1/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 01 17:36:24 +0000 2024](https://twitter.com/ChristopherA/status/1852404336242110955)
 
 ----
 
-> Next Wednesday, @BlockchainComns will be holding a meeting on a topic that I've long advocated for: safe digital identifiers. It's at 10am PST, and if you're interested in the future of identity, I hope you'll attend. [1/7] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/identifier-meeting.md
+> Next Wednesday, @BlockchainComns will be holding a meeting on a topic that I've long advocated for: safe digital identifiers. It's at 10am PST, and if you're interested in the future of identity, I hope you'll attend. [1/7] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/identifier-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/identifier-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 01 17:36:24 +0000 2024](https://twitter.com/ChristopherA/status/1852404335004790964)
 
@@ -44,7 +44,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185240434111
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1852404339719254054)
 
-> We've come a long ways from specing out DIDs at Rebooting the Web of Trust, but there are still many exciting futures for identity and identifiers. Join me next Wednesday to talk about some of them! [6/7] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/identifier-meeting.md
+> We've come a long ways from specing out DIDs at Rebooting the Web of Trust, but there are still many exciting futures for identity and identifiers. Join me next Wednesday to talk about some of them! [6/7] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/identifier-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/identifier-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 01 17:36:25 +0000 2024](https://twitter.com/ChristopherA/status/1852404341115859412)
 
@@ -52,7 +52,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185240433971
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1852404338611892284)
 
-> Our lead researcher @WolfMcNally will be presenting on using Gordian Envelope to create a DID-like identifier we're calling a XID, which has unique advantages due to Envelope's elision capabilities. [5/7] https://developer.blockchaincommons.com/xid/
+> Our lead researcher @WolfMcNally will be presenting on using Gordian Envelope to create a DID-like identifier we're calling a XID, which has unique advantages due to Envelope's elision capabilities. [5/7] [https://developer.blockchaincommons.com/xid/](https://developer.blockchaincommons.com/xid/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 01 17:36:25 +0000 2024](https://twitter.com/ChristopherA/status/1852404339719254054)
 
@@ -64,13 +64,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185240433861
 
 ----
 
-> Monetization is important, but not it it compromises our principles, and then risk being insufficiently differentiated from mDL and federations: https://www.linkedin.com/pulse/has-our-ssi-ecosystem-become-morally-bankrupt-christopher-allen-ysjjc https://twitter.com/tang_talks/status/1851387134953095216
+> Monetization is important, but not it it compromises our principles, and then risk being insufficiently differentiated from mDL and federations: [https://www.linkedin.com/pulse/has-our-ssi-ecosystem-become-morally-bankrupt-christopher-allen-ysjjc](https://www.linkedin.com/pulse/has-our-ssi-ecosystem-become-morally-bankrupt-christopher-allen-ysjjc) [https://twitter.com/tang_talks/status/1851387134953095216](https://twitter.com/tang_talks/status/1851387134953095216)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 01 23:31:04 +0000 2024](https://twitter.com/ChristopherA/status/1852493591219949685)
 
 ----
 
-> Pleased MuSig2 has advanced to a tagged release. We plan on talking about MuSig2 this Wednesday at Gordian Developer meeting (10am PST). In particular, I have been puzzling out a sequence diagram for how a trustless hub can be used to facilitate 3:3, 4:4, + peers (2:2 is easy)… https://twitter.com/n1ckler/status/1853492564705366029
+> Pleased MuSig2 has advanced to a tagged release. We plan on talking about MuSig2 this Wednesday at Gordian Developer meeting (10am PST). In particular, I have been puzzling out a sequence diagram for how a trustless hub can be used to facilitate 3:3, 4:4, + peers (2:2 is easy)… [https://twitter.com/n1ckler/status/1853492564705366029](https://twitter.com/n1ckler/status/1853492564705366029)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 04 21:51:35 +0000 2024](https://twitter.com/ChristopherA/status/1853555720442261908)
 
@@ -79,7 +79,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185240433861
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1853555720442261908)
 
 > Details on this Wednesday’s Gordian Meeting:  
-> https://x.com/ChristopherA/status/1852404335004790964
+> [https://x.com/ChristopherA/status/1852404335004790964](https://x.com/ChristopherA/status/1852404335004790964)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 04 21:51:36 +0000 2024](https://twitter.com/ChristopherA/status/1853555722438762896)
 
@@ -87,19 +87,19 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185355572044
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1853555722438762896)
 
-> We also have a new developer page dedicated to MuSig2: https://developer.blockchaincommons.com/musig/
+> We also have a new developer page dedicated to MuSig2: [https://developer.blockchaincommons.com/musig/](https://developer.blockchaincommons.com/musig/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 05 00:18:15 +0000 2024](https://twitter.com/ChristopherA/status/1853592627624726872)
 
 ----
 
-> This event for digital wallet devs on a new kind of decentralized identifier, edge identifiers &amp; cliques using MuSig2 &amp; FROST, is tomorrow morning at 10am **PST**. If you are attending from overseas, the US just changed our clocks, so double check your time zone conversion. https://twitter.com/ChristopherA/status/1852404335004790964
+> This event for digital wallet devs on a new kind of decentralized identifier, edge identifiers &amp; cliques using MuSig2 &amp; FROST, is tomorrow morning at 10am **PST**. If you are attending from overseas, the US just changed our clocks, so double check your time zone conversion. [https://twitter.com/ChristopherA/status/1852404335004790964](https://twitter.com/ChristopherA/status/1852404335004790964)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 06 02:54:48 +0000 2024](https://twitter.com/ChristopherA/status/1853994414764626137)
 
 ----
 
-> Interested in group signatures, such MuSig2? Worried about the risks of correlation of public keys used as identifiers? We'll be talking about this and more in 10 minutes at our Gordian Developer Meeting. https://twitter.com/ChristopherA/status/1853994414764626137
+> Interested in group signatures, such MuSig2? Worried about the risks of correlation of public keys used as identifiers? We'll be talking about this and more in 10 minutes at our Gordian Developer Meeting. [https://twitter.com/ChristopherA/status/1853994414764626137](https://twitter.com/ChristopherA/status/1853994414764626137)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 06 17:50:44 +0000 2024](https://twitter.com/ChristopherA/status/1854219881912398322)
 
@@ -113,7 +113,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249103
 
 ----
 
-> The @BlockchainComns meeting this month focused on identifiers: in particular a new form of decentralized identifier; our new clique identifiers, and MuSig2 signatures (which can enable both edge identifiers &amp; cliques). [1/9] https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts
+> The @BlockchainComns meeting this month focused on identifiers: in particular a new form of decentralized identifier; our new clique identifiers, and MuSig2 signatures (which can enable both edge identifiers &amp; cliques). [1/9] [https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts](https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 23:49:14 +0000 2024](https://twitter.com/ChristopherA/status/1854672491035423033)
 
@@ -129,7 +129,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249476
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1854672492411150780)
 
-> Our first presentation was on XIDs, a new sort of decentralized identifier built on Gordian Envelope. It builds on the work I did for the W3C on Decentralized Identifiers (DIDs), but has capabilities that DIDs do not.  [3/10] https://www.youtube.com/watch?v=lKVp5WzBZD4
+> Our first presentation was on XIDs, a new sort of decentralized identifier built on Gordian Envelope. It builds on the work I did for the W3C on Decentralized Identifiers (DIDs), but has capabilities that DIDs do not.  [3/10] [https://www.youtube.com/watch?v=lKVp5WzBZD4](https://www.youtube.com/watch?v=lKVp5WzBZD4)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 23:49:15 +0000 2024](https://twitter.com/ChristopherA/status/1854672494764212631)
 
@@ -137,7 +137,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249241
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1854672498794938530)
 
-> Cliques are built with Schnorr signatures. A first look at how we can create a MuSig2 signature to support cliques, taproot, etc. was thus our third and final presentation for the day. [7/10] https://www.youtube.com/watch?v=FaNypFsGczg
+> Cliques are built with Schnorr signatures. A first look at how we can create a MuSig2 signature to support cliques, taproot, etc. was thus our third and final presentation for the day. [7/10] [https://www.youtube.com/watch?v=FaNypFsGczg](https://www.youtube.com/watch?v=FaNypFsGczg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 23:49:16 +0000 2024](https://twitter.com/ChristopherA/status/1854672499935789395)
 
@@ -153,7 +153,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249741
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1854672496160915951)
 
-> The second presentation was on Edge Identifiers &amp; Cliques. This is a new paradigm leveraging protocols like MuSig2 and FROST  to create identifiers based on relationships [5/10] https://www.youtube.com/watch?v=EFHvyrUj7Kk
+> The second presentation was on Edge Identifiers &amp; Cliques. This is a new paradigm leveraging protocols like MuSig2 and FROST  to create identifiers based on relationships [5/10] [https://www.youtube.com/watch?v=EFHvyrUj7Kk](https://www.youtube.com/watch?v=EFHvyrUj7Kk)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 23:49:16 +0000 2024](https://twitter.com/ChristopherA/status/1854672497419112528)
 
@@ -161,7 +161,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249616
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1854672502766850328)
 
-> The next Gordian Developer Meeting will have presentations to help wallet developers to integrate FROST in 2025. It's on Dec. 4th. If you're a wallet developer, sign up for our announcement list to get the complete info on the meeting! [10/10] https://www.blockchaincommons.com/subscribe/
+> The next Gordian Developer Meeting will have presentations to help wallet developers to integrate FROST in 2025. It's on Dec. 4th. If you're a wallet developer, sign up for our announcement list to get the complete info on the meeting! [10/10] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 07 23:49:17 +0000 2024](https://twitter.com/ChristopherA/status/1854672504012628166)
 
@@ -183,7 +183,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249993
 
 ----
 
-> 👍"This session was an important reminder for me—and for all of us in this space—not to lose sight of the vision and principles that brought us here. Even as we navigate complex environments, we must stay grounded in the values that underpin SSI, ensuring they remain central as… https://twitter.com/mathieu_glaude/status/1854542188899676408
+> 👍"This session was an important reminder for me—and for all of us in this space—not to lose sight of the vision and principles that brought us here. Even as we navigate complex environments, we must stay grounded in the values that underpin SSI, ensuring they remain central as… [https://twitter.com/mathieu_glaude/status/1854542188899676408](https://twitter.com/mathieu_glaude/status/1854542188899676408)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 08 02:11:21 +0000 2024](https://twitter.com/ChristopherA/status/1854708255202984337)
 
@@ -191,7 +191,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185467249993
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1854708255202984337)
 
-> My blog post on this topic is at https://www.lifewithalacrity.com/article/ssi-bankruptcy/
+> My blog post on this topic is at [https://www.lifewithalacrity.com/article/ssi-bankruptcy/](https://www.lifewithalacrity.com/article/ssi-bankruptcy/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 08 02:12:05 +0000 2024](https://twitter.com/ChristopherA/status/1854708439525867890)
 
@@ -199,13 +199,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185470825520
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1854708439525867890)
 
-> Or if you prefer LinkedIn: https://www.linkedin.com/pulse/has-our-ssi-ecosystem-become-morally-bankrupt-christopher-allen-ysjjc/
+> Or if you prefer LinkedIn: [https://www.linkedin.com/pulse/has-our-ssi-ecosystem-become-morally-bankrupt-christopher-allen-ysjjc/](https://www.linkedin.com/pulse/has-our-ssi-ecosystem-become-morally-bankrupt-christopher-allen-ysjjc/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 08 02:13:14 +0000 2024](https://twitter.com/ChristopherA/status/1854708728614076922)
 
 ----
 
-> Thanks for the invitation to speak at the W3C Credentials Community Group. https://twitter.com/tang_talks/status/1854985470624801059
+> Thanks for the invitation to speak at the W3C Credentials Community Group. [https://twitter.com/tang_talks/status/1854985470624801059](https://twitter.com/tang_talks/status/1854985470624801059)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 08 21:05:36 +0000 2024](https://twitter.com/ChristopherA/status/1854993696883880393)
 
@@ -243,7 +243,7 @@ Replying to [@getpubky](https://twitter.com/getpubky/status/1854904114838159466)
 
 > For 10 years now in the #SSI community we’ve been trying to move away from identifiers based on public keys, unless they are revocable, rotatable, and delegatable. W3C DIDs don’t mandate this, but should.  
 >   
-> Here’s how you can do it with XIDs: https://youtu.be/lKVp5WzBZD4
+> Here’s how you can do it with XIDs: [https://youtu.be/lKVp5WzBZD4](https://youtu.be/lKVp5WzBZD4)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:24:41 +0000 2024](https://twitter.com/ChristopherA/status/1855043800718323897)
 
@@ -251,7 +251,7 @@ Replying to [@getpubky](https://twitter.com/getpubky/status/1854904114838159466)
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1855051756360581314)
 
-> Here is a sequence diagram that shows it is fairly easy to do peer-based MuSig2, as is trivial to create and authenticate a secure channel between two peers. However, for 3 more parties, using a trustless facilitator, it is harder: https://developer.blockchaincommons.com/musig/sequence/ [3/10]
+> Here is a sequence diagram that shows it is fairly easy to do peer-based MuSig2, as is trivial to create and authenticate a secure channel between two peers. However, for 3 more parties, using a trustless facilitator, it is harder: [https://developer.blockchaincommons.com/musig/sequence/](https://developer.blockchaincommons.com/musig/sequence/) [3/10]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:18 +0000 2024](https://twitter.com/ChristopherA/status/1855051757887352985)
 
@@ -259,7 +259,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505175636
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1855051754380931155)
 
-> Here our root webpage about MuSig2 (and its variants) https://developer.blockchaincommons.com/musig/ [2/10]
+> Here our root webpage about MuSig2 (and its variants) [https://developer.blockchaincommons.com/musig/](https://developer.blockchaincommons.com/musig/) [2/10]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:18 +0000 2024](https://twitter.com/ChristopherA/status/1855051756360581314)
 
@@ -267,7 +267,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505175438
 
 > I'm pleased to hear that some real-world implementations begin to leverage the power of group signatures using MuSig2 in taproot on Bitcoin.  
 >   
-> Doing 2-of-2 MuSig is relatively easy, but I've been puzzled on how to do 3-of-3 or more with a trustless facilitator. Thread 🧵 follows:… https://twitter.com/salvatoshi/status/1854523120335323137
+> Doing 2-of-2 MuSig is relatively easy, but I've been puzzled on how to do 3-of-3 or more with a trustless facilitator. Thread 🧵 follows:… [https://twitter.com/salvatoshi/status/1854523120335323137](https://twitter.com/salvatoshi/status/1854523120335323137)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:18 +0000 2024](https://twitter.com/ChristopherA/status/1855051754380931155)
 
@@ -275,7 +275,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505175438
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1855051759665787171)
 
-> I have a short video about this sequence diagram and my puzzling of how to create a trustless coordinator for larger group signatures: https://youtu.be/FaNypFsGczg [5/10]
+> I have a short video about this sequence diagram and my puzzling of how to create a trustless coordinator for larger group signatures: [https://youtu.be/FaNypFsGczg](https://youtu.be/FaNypFsGczg) [5/10]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:19 +0000 2024](https://twitter.com/ChristopherA/status/1855051761251193069)
 
@@ -299,7 +299,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505176464
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1855051763096715623)
 
-> MuSig2 is also useful for other ideas, including various new forms of relational and group identity that have some resilience advantages. TL;DR? What if identity were about our connections &amp; communities? https://www.youtube.com/watch?v=EFHvyrUj7Kk [7/10]
+> MuSig2 is also useful for other ideas, including various new forms of relational and group identity that have some resilience advantages. TL;DR? What if identity were about our connections &amp; communities? [https://www.youtube.com/watch?v=EFHvyrUj7Kk](https://www.youtube.com/watch?v=EFHvyrUj7Kk) [7/10]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:20 +0000 2024](https://twitter.com/ChristopherA/status/1855051764640157716)
 
@@ -315,7 +315,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505176125
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1855051767739761027)
 
-> If you find our work at @BlockchainComns valuable, become a sponsor. We need your patronage so that we'll be around to bring in the next wave of innovation! https://github.com/sponsors/BlockchainCommons [10/10]
+> If you find our work at @BlockchainComns valuable, become a sponsor. We need your patronage so that we'll be around to bring in the next wave of innovation! [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons) [10/10]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:21 +0000 2024](https://twitter.com/ChristopherA/status/1855051769346191707)
 
@@ -323,7 +323,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505176773
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1855051766246568205)
 
-> Our meeting next month is on FROST (another multisig approach), but we plan to have one in early 2025 dedicated to MuSig2 interoperability issues. Sign up to receive announcements about future meetings at https://www.blockchaincommons.com/subscribe/ [9/10]
+> Our meeting next month is on FROST (another multisig approach), but we plan to have one in early 2025 dedicated to MuSig2 interoperability issues. Sign up to receive announcements about future meetings at [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/) [9/10]
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 00:56:21 +0000 2024](https://twitter.com/ChristopherA/status/1855051767739761027)
 
@@ -331,7 +331,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185505176624
 
 Replying to [@salvatoshi and @achow101](https://twitter.com/salvatoshi/status/1854523120335323137)
 
-> https://x.com/ChristopherA/status/1855051754380931155 👀🔍
+> [https://x.com/ChristopherA/status/1855051754380931155](https://x.com/ChristopherA/status/1855051754380931155) 👀🔍
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 09 01:03:19 +0000 2024](https://twitter.com/ChristopherA/status/1855053520849805627)
 
@@ -347,7 +347,7 @@ Replying to [@salvatoshi](https://twitter.com/salvatoshi/status/1854535038454607
 
 Replying to [@philiprosedale](https://twitter.com/philiprosedale/status/1855330104370667620)
 
-> https://x.com/christophera/status/1242941221850529797 https://twitter.com/ChristopherA/status/1242941221850529797
+> [https://x.com/christophera/status/1242941221850529797](https://x.com/christophera/status/1242941221850529797) [https://twitter.com/ChristopherA/status/1242941221850529797](https://twitter.com/ChristopherA/status/1242941221850529797)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 10 02:35:05 +0000 2024](https://twitter.com/ChristopherA/status/1855439005258825956)
 
@@ -355,7 +355,7 @@ Replying to [@philiprosedale](https://twitter.com/philiprosedale/status/18553301
 
 Replying to [@philiprosedale](https://twitter.com/ChristopherA/status/1855439005258825956)
 
-> https://x.com/christophera/status/1243413128378892293 https://twitter.com/ChristopherA/status/1243413128378892293
+> [https://x.com/christophera/status/1243413128378892293](https://x.com/christophera/status/1243413128378892293) [https://twitter.com/ChristopherA/status/1243413128378892293](https://twitter.com/ChristopherA/status/1243413128378892293)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 10 02:35:29 +0000 2024](https://twitter.com/ChristopherA/status/1855439104244416999)
 
@@ -371,7 +371,7 @@ Replying to [@philiprosedale](https://twitter.com/philiprosedale/status/18554504
 
 Replying to [@philiprosedale](https://twitter.com/ChristopherA/status/1855454631062917141)
 
-> https://x.com/christophera/status/1615138869695090690 https://twitter.com/ChristopherA/status/1615138869695090690
+> [https://x.com/christophera/status/1615138869695090690](https://x.com/christophera/status/1615138869695090690) [https://twitter.com/ChristopherA/status/1615138869695090690](https://twitter.com/ChristopherA/status/1615138869695090690)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 10 03:38:16 +0000 2024](https://twitter.com/ChristopherA/status/1855454906007924814)
 
@@ -411,7 +411,7 @@ Replying to [@philiprosedale](https://twitter.com/ChristopherA/status/1855889579
 
 Replying to [@ankurb and @jessepollak](https://twitter.com/ankurb/status/1855863175868244004)
 
-> https://x.com/ottomorac/status/1851420098365702241 https://twitter.com/ottomorac/status/1851420098365702241
+> [https://x.com/ottomorac/status/1851420098365702241](https://x.com/ottomorac/status/1851420098365702241) [https://twitter.com/ottomorac/status/1851420098365702241](https://twitter.com/ottomorac/status/1851420098365702241)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 11 08:59:23 +0000 2024](https://twitter.com/ChristopherA/status/1855898101900525662)
 
@@ -419,7 +419,7 @@ Replying to [@ankurb and @jessepollak](https://twitter.com/ankurb/status/1855863
 
 Replying to [@ankurb and @jessepollak](https://twitter.com/ChristopherA/status/1855898101900525662)
 
-> https://www.blockchaincommons.com/musings/musings-ssi-bankruptcy/
+> [https://www.blockchaincommons.com/musings/musings-ssi-bankruptcy/](https://www.blockchaincommons.com/musings/musings-ssi-bankruptcy/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 11 09:00:07 +0000 2024](https://twitter.com/ChristopherA/status/1855898289226539133)
 
@@ -439,7 +439,7 @@ Replying to [@philiprosedale](https://twitter.com/philiprosedale/status/18561808
 
 ----
 
-> 🔍👀 https://twitter.com/decentralgabe/status/1856418472823271889
+> 🔍👀 [https://twitter.com/decentralgabe/status/1856418472823271889](https://twitter.com/decentralgabe/status/1856418472823271889)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 13 01:25:21 +0000 2024](https://twitter.com/ChristopherA/status/1856508619216564449)
 
@@ -447,13 +447,13 @@ Replying to [@philiprosedale](https://twitter.com/philiprosedale/status/18561808
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1857085338587382141)
 
-> It's my newest article on "Progressive Trust", a topic that I've been writing about for over two decades. [2/11] https://buff.ly/4fNi0YC
+> It's my newest article on "Progressive Trust", a topic that I've been writing about for over two decades. [2/11] [https://buff.ly/4fNi0YC](https://buff.ly/4fNi0YC)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 14 15:37:02 +0000 2024](https://twitter.com/ChristopherA/status/1857085340638482841)
 
 ----
 
-> In real life, we extend trust gradually, slowly learning about people we're interacting with &amp; revealing more of ourself in the process. Why don't we do that in the digital world? That's the topic of "Building Trust in Gradients", today's Musings. [1/11] https://buff.ly/3CmcVYU
+> In real life, we extend trust gradually, slowly learning about people we're interacting with &amp; revealing more of ourself in the process. Why don't we do that in the digital world? That's the topic of "Building Trust in Gradients", today's Musings. [1/11] [https://buff.ly/3CmcVYU](https://buff.ly/3CmcVYU)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 14 15:37:02 +0000 2024](https://twitter.com/ChristopherA/status/1857085338587382141)
 
@@ -495,7 +495,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185708534561
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1857085344035807410)
 
-> But that raises another question: what does a model of real-world trust really look like? That's what today's article, "Building Trust in Gradients" tries to tease out. [5/11] https://buff.ly/3CmcVYU
+> But that raises another question: what does a model of real-world trust really look like? That's what today's article, "Building Trust in Gradients" tries to tease out. [5/11] [https://buff.ly/3CmcVYU](https://buff.ly/3CmcVYU)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 14 15:37:04 +0000 2024](https://twitter.com/ChristopherA/status/1857085345617043674)
 
@@ -503,7 +503,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185708534403
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1857085351195492595)
 
-> "Building Trust in Gradients" summarizes this crucial life cycle from a longer article that focuses even more on the language of trust and its origins. It's available on the @BlockchainComns developer website. [9/11] https://buff.ly/3YPUCDa
+> "Building Trust in Gradients" summarizes this crucial life cycle from a longer article that focuses even more on the language of trust and its origins. It's available on the @BlockchainComns developer website. [9/11] [https://buff.ly/3YPUCDa](https://buff.ly/3YPUCDa)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 14 15:37:05 +0000 2024](https://twitter.com/ChristopherA/status/1857085352877478351)
 
@@ -533,7 +533,7 @@ Replying to [@BlockchainComns](https://twitter.com/ChristopherA/status/185708535
 
 ----
 
-> I've noticed that many of our community has moved to BlueSky. You can find me there at https://bsky.app/profile/christophera.bsky.social/. I plan to cross-post there and on LinkedIn my more important posts and links.
+> I've noticed that many of our community has moved to BlueSky. You can find me there at [https://bsky.app/profile/christophera.bsky.social/.](https://bsky.app/profile/christophera.bsky.social/.) I plan to cross-post there and on LinkedIn my more important posts and links.
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 14 21:14:10 +0000 2024](https://twitter.com/ChristopherA/status/1857170179844919465)
 
