--- a/_tweets-md/2024/2024-06-01-tweets.md
+++ b/_tweets-md/2024/2024-06-01-tweets.md
@@ -4,7 +4,7 @@ date: "2024-06-30"
 time:  23:59:59 +0000
 ---
 
-> This paper demonstrates some practical &amp; secure applications to verify Bitcoin transaction properties, with secp256k1 Schnorr examples using Groth16 &amp; Plonk proofs. These could optimize scenarios like blind transaction cosigners, escrow, blind coinswaps, and more. Powerful!🔍👀 https://twitter.com/n1ckler/status/1798028407550464337
+> This paper demonstrates some practical &amp; secure applications to verify Bitcoin transaction properties, with secp256k1 Schnorr examples using Groth16 &amp; Plonk proofs. These could optimize scenarios like blind transaction cosigners, escrow, blind coinswaps, and more. Powerful!🔍👀 [https://twitter.com/n1ckler/status/1798028407550464337](https://twitter.com/n1ckler/status/1798028407550464337)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 18:23:03 +0000 2024](https://twitter.com/ChristopherA/status/1798420285282275471)
 
@@ -12,13 +12,13 @@ time:  23:59:59 +0000
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1798439205531771209)
 
-> Our 2024 FROST meetings are courtesy of @HRF, who  awarded Blockchain Commons a Bitcoin Development grant because they recognize FROST as "a crucial building block for allowing users to control their identities and Bitcoin in a self-sovereign way." [2/6] https://hrf.org/hrf-bitcoin-development-fund-grants-1-billion-satoshis-to-14-projects-worldwide/
+> Our 2024 FROST meetings are courtesy of @HRF, who  awarded Blockchain Commons a Bitcoin Development grant because they recognize FROST as "a crucial building block for allowing users to control their identities and Bitcoin in a self-sovereign way." [2/6] [https://hrf.org/hrf-bitcoin-development-fund-grants-1-billion-satoshis-to-14-projects-worldwide/](https://hrf.org/hrf-bitcoin-development-fund-grants-1-billion-satoshis-to-14-projects-worldwide/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:38:14 +0000 2024](https://twitter.com/ChristopherA/status/1798439206836191428)
 
 ----
 
-> Blockchain Commons @BlockchainComns is holding two more FROST meetings this year. On Sept. 18, we'll host a virtual round table for FROST library implementers &amp; cryptographers. On Dec. 4 we invite wallet developers to coordinate their FROST efforts. [1/6] https://developer.blockchaincommons.com/frost/#upcoming-events
+> Blockchain Commons @BlockchainComns is holding two more FROST meetings this year. On Sept. 18, we'll host a virtual round table for FROST library implementers &amp; cryptographers. On Dec. 4 we invite wallet developers to coordinate their FROST efforts. [1/6] [https://developer.blockchaincommons.com/frost/#upcoming-events](https://developer.blockchaincommons.com/frost/#upcoming-events)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:38:14 +0000 2024](https://twitter.com/ChristopherA/status/1798439205531771209)
 
@@ -26,7 +26,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/179843920553
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1798439209843523896)
 
-> You can join us for our next FROST meetings. If you're a FROST library implementer or a wallet developer, sign up for our announcements lists, to get info on attending our Sept. &amp; Dec. meetings. [5/6] https://developer.blockchaincommons.com/frost/#upcoming-events
+> You can join us for our next FROST meetings. If you're a FROST library implementer or a wallet developer, sign up for our announcements lists, to get info on attending our Sept. &amp; Dec. meetings. [5/6] [https://developer.blockchaincommons.com/frost/#upcoming-events](https://developer.blockchaincommons.com/frost/#upcoming-events)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:38:15 +0000 2024](https://twitter.com/ChristopherA/status/1798439211097567494)
 
@@ -34,7 +34,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/179843920984
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1798439208337715617)
 
-> For more info on FROST, take a look in our archives of the talk with @jesseposner about some of the amazing advancements that FROST is already supporting, or is coming soon. [4/6] https://www.youtube.com/watch?v=uCM8dDql6oo&t=1033s
+> For more info on FROST, take a look in our archives of the talk with @jesseposner about some of the amazing advancements that FROST is already supporting, or is coming soon. [4/6] [https://www.youtube.com/watch?v=uCM8dDql6oo&t=1033s](https://www.youtube.com/watch?v=uCM8dDql6oo&t=1033s)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:38:15 +0000 2024](https://twitter.com/ChristopherA/status/1798439209843523896)
 
@@ -42,7 +42,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/179843920833
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1798439206836191428)
 
-> Why is FROST important as a next-generation key-management &amp; signature system? I wrote a bit about that in March. [3/6] https://x.com/ChristopherA/status/1774680107380048144
+> Why is FROST important as a next-generation key-management &amp; signature system? I wrote a bit about that in March. [3/6] [https://x.com/ChristopherA/status/1774680107380048144](https://x.com/ChristopherA/status/1774680107380048144)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:38:15 +0000 2024](https://twitter.com/ChristopherA/status/1798439208337715617)
 
@@ -50,7 +50,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/179843920683
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1798439211097567494)
 
-> We are very appreciative of @HRF's grant, but we are also looking for additional support to bring FROST into our own interoperable reference libraries, example code and apps. Become a monthly Blockchain Commons sponsor, or consider a one-time grant! [6/6] https://github.com/sponsors/BlockchainCommons
+> We are very appreciative of @HRF's grant, but we are also looking for additional support to bring FROST into our own interoperable reference libraries, example code and apps. Become a monthly Blockchain Commons sponsor, or consider a one-time grant! [6/6] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:38:16 +0000 2024](https://twitter.com/ChristopherA/status/1798439212297130156)
 
@@ -66,7 +66,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/179842028528
 
 Replying to [@boyacaxa and @TheVladCostea](https://twitter.com/boyacaxa/status/1798425257377972430)
 
-> I'm not an expert of zk-proof systems, but we hope to leverage them in future @BlockchainComns reference code to support projects like TorGap servers. If you'd like us to talk about Collaborative Seed Recovery, or our other projects, let me know. https://x.com/ChristopherA/status/1798442147609526540
+> I'm not an expert of zk-proof systems, but we hope to leverage them in future @BlockchainComns reference code to support projects like TorGap servers. If you'd like us to talk about Collaborative Seed Recovery, or our other projects, let me know. [https://x.com/ChristopherA/status/1798442147609526540](https://x.com/ChristopherA/status/1798442147609526540)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 19:52:46 +0000 2024](https://twitter.com/ChristopherA/status/1798442864315363703)
 
@@ -80,13 +80,13 @@ Replying to [@boyacaxa and @TheVladCostea](https://twitter.com/boyacaxa/status/1
 
 Replying to [@CriptoNoticias and @BlockchainComns](https://twitter.com/CriptoNoticias/status/1798440455480205464)
 
-> Tal vez a tus lectores también les interese nuestra traducción al español de nuestro popular curso "Aprender Bitcoin Desde la Línea de Comandos" en https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/tree/master/es — además, estamos buscando hablantes nativos de español que puedan voluntariamente ayudarnos a mantener este…
+> Tal vez a tus lectores también les interese nuestra traducción al español de nuestro popular curso "Aprender Bitcoin Desde la Línea de Comandos" en [https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/tree/master/es](https://github.com/BlockchainCommons/Learning-Bitcoin-from-the-Command-Line/tree/master/es) — además, estamos buscando hablantes nativos de español que puedan voluntariamente ayudarnos a mantener este…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 20:10:18 +0000 2024](https://twitter.com/ChristopherA/status/1798447273984348488)
 
 ----
 
-> Some useful 🔎 on "Private Cloud Compute" announced at #wwdc24 today. The effort to secure cloud services so that Apple can't see your data is commendable. I suspect it isn't perfect, but right now is the only alternative, as on-device local ML isn't competitive or sufficient. https://twitter.com/matthew_d_green/status/1800291897245835616
+> Some useful 🔎 on "Private Cloud Compute" announced at #wwdc24 today. The effort to secure cloud services so that Apple can't see your data is commendable. I suspect it isn't perfect, but right now is the only alternative, as on-device local ML isn't competitive or sufficient. [https://twitter.com/matthew_d_green/status/1800291897245835616](https://twitter.com/matthew_d_green/status/1800291897245835616)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 11 01:56:48 +0000 2024](https://twitter.com/ChristopherA/status/1800346414461129123)
 
@@ -114,7 +114,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/180602289525
 
 ----
 
-> Minimum Viable Product (MVP) has become a standard business methodology of the 21st century thanks to the success of Twitter and others, but does it work? I say "maybe not" in this week's "Musings of a Trust Architect" article. [1/10] https://www.blockchaincommons.com/musings/musings-mva/
+> Minimum Viable Product (MVP) has become a standard business methodology of the 21st century thanks to the success of Twitter and others, but does it work? I say "maybe not" in this week's "Musings of a Trust Architect" article. [1/10] [https://www.blockchaincommons.com/musings/musings-mva/](https://www.blockchaincommons.com/musings/musings-mva/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 26 17:53:07 +0000 2024](https://twitter.com/ChristopherA/status/1806022895258489215)
 
@@ -140,7 +140,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/180602289728
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1806022904842527173)
 
-> I used MVA principles when I co-authored the SSL 3.0/TLS 1.0 spec and its reference implementation, whose success speaks for itself. I've also used it in the design of Blockchain Commons' Gordian system. [6/10] https://developer.blockchaincommons.com/architecture/
+> I used MVA principles when I co-authored the SSL 3.0/TLS 1.0 spec and its reference implementation, whose success speaks for itself. I've also used it in the design of Blockchain Commons' Gordian system. [6/10] [https://developer.blockchaincommons.com/architecture/](https://developer.blockchaincommons.com/architecture/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 26 17:53:09 +0000 2024](https://twitter.com/ChristopherA/status/1806022906964541672)
 
@@ -164,7 +164,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/180602290868
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1806022906964541672)
 
-> This week's "Musing of a Trust Architect" article covers all of these topics: how MVP can fail; why MVA could be an alternative; and how this business methodology was used for TLS and Gordian. [7/10] https://www.blockchaincommons.com/musings/musings-mva/
+> This week's "Musing of a Trust Architect" article covers all of these topics: how MVP can fail; why MVA could be an alternative; and how this business methodology was used for TLS and Gordian. [7/10] [https://www.blockchaincommons.com/musings/musings-mva/](https://www.blockchaincommons.com/musings/musings-mva/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 26 17:53:10 +0000 2024](https://twitter.com/ChristopherA/status/1806022908688396368)
 
@@ -172,7 +172,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/180602290696
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1806022912589046112)
 
-> Ensure this sort of trust architecture and strategic thinking continues by becoming a sponsor of Blockchain Commons through GitHub. Even a small monthly contribution helps, as your "social proof" makes it easier for to get funding from others. [10/10] https://github.com/sponsors/BlockchainCommons
+> Ensure this sort of trust architecture and strategic thinking continues by becoming a sponsor of Blockchain Commons through GitHub. Even a small monthly contribution helps, as your "social proof" makes it easier for to get funding from others. [10/10] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 26 17:53:11 +0000 2024](https://twitter.com/ChristopherA/status/1806022914380087306)
 
@@ -180,6 +180,6 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/180602291258
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1806022911045644426)
 
-> If this sort of architectural thought is important to you as a digital asset or identity wallet designer, join us in the Gordian Developer Community. We have monthly meetings to discuss advances in the industry. [9/10] https://www.blockchaincommons.com/subscribe/
+> If this sort of architectural thought is important to you as a digital asset or identity wallet designer, join us in the Gordian Developer Community. We have monthly meetings to discuss advances in the industry. [9/10] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 26 17:53:11 +0000 2024](https://twitter.com/ChristopherA/status/1806022912589046112)
