--- a/_tweets-md/2024/2024-08-01-tweets.md
+++ b/_tweets-md/2024/2024-08-01-tweets.md
@@ -10,7 +10,7 @@ time:  23:59:59 +0000
 
 ----
 
-> Our 2nd FROST Implementors Roundtable will be on Sept 18th for cryptographers, protocol and library devs. Another meeting on Dec 4th will focus on wallet developers integrating these tools. If you would like to present at either meeting, let me know. https://developer.blockchaincommons.com/frost
+> Our 2nd FROST Implementors Roundtable will be on Sept 18th for cryptographers, protocol and library devs. Another meeting on Dec 4th will focus on wallet developers integrating these tools. If you would like to present at either meeting, let me know. [https://developer.blockchaincommons.com/frost](https://developer.blockchaincommons.com/frost)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:08:28 +0000 2024](https://twitter.com/ChristopherA/status/1819223717903585744)
 
@@ -18,7 +18,7 @@ time:  23:59:59 +0000
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1819223720226906425)
 
-> Details, video and transcripts from our 1st FROST Implementor's meeting is at https://developer.blockchaincommons.com/frost/meeting1/, and our 1st FROST wallet devs meeting at https://developer.blockchaincommons.com/frost/developers1/. Many thanks to the Human Rights Foundation (@HRF) for sponsoring these events.
+> Details, video and transcripts from our 1st FROST Implementor's meeting is at [https://developer.blockchaincommons.com/frost/meeting1/,](https://developer.blockchaincommons.com/frost/meeting1/,) and our 1st FROST wallet devs meeting at [https://developer.blockchaincommons.com/frost/developers1/.](https://developer.blockchaincommons.com/frost/developers1/.) Many thanks to the Human Rights Foundation (@HRF) for sponsoring these events.
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:08:29 +0000 2024](https://twitter.com/ChristopherA/status/1819223721972060427)
 
@@ -34,7 +34,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/181922371790
 
 Replying to [@vazertuche](https://twitter.com/vazertuche/status/1799557285418578090)
 
-> https://x.com/ChristopherA/status/1819223717903585744
+> [https://x.com/ChristopherA/status/1819223717903585744](https://x.com/ChristopherA/status/1819223717903585744)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:09:15 +0000 2024](https://twitter.com/ChristopherA/status/1819223913488175236)
 
@@ -42,7 +42,7 @@ Replying to [@vazertuche](https://twitter.com/vazertuche/status/1799557285418578
 
 Replying to [@jonf3n, @BlockchainComns and @Ledger](https://twitter.com/jonf3n/status/1650922639941042176)
 
-> This is now officially available in the approved apps for Ledger. Dev mode no longer required https://twitter.com/ChristopherA/status/1816517209298268532
+> This is now officially available in the approved apps for Ledger. Dev mode no longer required [https://twitter.com/ChristopherA/status/1816517209298268532](https://twitter.com/ChristopherA/status/1816517209298268532)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:29:55 +0000 2024](https://twitter.com/ChristopherA/status/1819229116325130249)
 
@@ -71,7 +71,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182039420982
 
 ----
 
-> As a reminder, the special @BlockchainComns BIP-85 presentation for wallet developers is coming up this Wednesday, the 7th. [1/7] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+> As a reminder, the special @BlockchainComns BIP-85 presentation for wallet developers is coming up this Wednesday, the 7th. [1/7] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:35 +0000 2024](https://twitter.com/ChristopherA/status/1820394209821831336)
 
@@ -79,7 +79,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182039420982
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394213801882070)
 
-> Ensuring users don't lose their digital assets is one of the most challenging elements of self-sovereign asset control. It's been one of the priorities at @BlockchainComns from the start. [5/7] https://www.smartcustody.com/
+> Ensuring users don't lose their digital assets is one of the most challenging elements of self-sovereign asset control. It's been one of the priorities at @BlockchainComns from the start. [5/7] [https://www.smartcustody.com/](https://www.smartcustody.com/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:36 +0000 2024](https://twitter.com/ChristopherA/status/1820394215387681217)
 
@@ -87,7 +87,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182039421380
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394212376101178)
 
-> We'll also talk about other ways to improve seed resilience at our meeting:  Sharded Secret Key Reconstruction (SSKR), Collaborative Seed Recovery (CSR), Gordian Depository, etc. The link (below) has the URL for the meeting  and calendar invite. [4/7] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+> We'll also talk about other ways to improve seed resilience at our meeting:  Sharded Secret Key Reconstruction (SSKR), Collaborative Seed Recovery (CSR), Gordian Depository, etc. The link (below) has the URL for the meeting  and calendar invite. [4/7] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:36 +0000 2024](https://twitter.com/ChristopherA/status/1820394213801882070)
 
@@ -95,7 +95,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182039421237
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394211163988400)
 
-> BIP-85 specifies how to generate children seed from a master seed, so you can have “One Seed to rule them all”. [3/7] https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki
+> BIP-85 specifies how to generate children seed from a master seed, so you can have “One Seed to rule them all”. [3/7] [https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki](https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:36 +0000 2024](https://twitter.com/ChristopherA/status/1820394212376101178)
 
@@ -103,7 +103,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182039421116
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394216599805958)
 
-> If self-sovereign control over digital assets is important to you, or if you just want to make digital-asset wallets better, become a patron of @BlockchainComns. [7/7] https://github.com/sponsors/BlockchainCommons
+> If self-sovereign control over digital assets is important to you, or if you just want to make digital-asset wallets better, become a patron of @BlockchainComns. [7/7] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:37 +0000 2024](https://twitter.com/ChristopherA/status/1820394217874592176)
 
@@ -125,7 +125,7 @@ Replying to [@BitcoinLixin, @zcash and @jswihart](https://twitter.com/BitcoinLix
 
 ----
 
-> I’ve been talking about wallet key exfiltration attacks since first heard about them from @pwuille in 2018. There just hasn’t been demand because it required wallets to keep state. This is exactly what our Gordian Sealed Transport Protocol (GSTP) addresses with its Encapsulated… https://twitter.com/ChristopherA/status/1651308417187999745
+> I’ve been talking about wallet key exfiltration attacks since first heard about them from @pwuille in 2018. There just hasn’t been demand because it required wallets to keep state. This is exactly what our Gordian Sealed Transport Protocol (GSTP) addresses with its Encapsulated… [https://twitter.com/ChristopherA/status/1651308417187999745](https://twitter.com/ChristopherA/status/1651308417187999745)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:27:34 +0000 2024](https://twitter.com/ChristopherA/status/1820662975495364804)
 
@@ -133,7 +133,7 @@ Replying to [@BitcoinLixin, @zcash and @jswihart](https://twitter.com/BitcoinLix
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820662975495364804)
 
-> https://x.com/christophera/status/1550125898686353411 https://twitter.com/ChristopherA/status/1550125898686353411
+> [https://x.com/christophera/status/1550125898686353411](https://x.com/christophera/status/1550125898686353411) [https://twitter.com/ChristopherA/status/1550125898686353411](https://twitter.com/ChristopherA/status/1550125898686353411)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:28:45 +0000 2024](https://twitter.com/ChristopherA/status/1820663275136377038)
 
@@ -141,7 +141,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182066297549
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820663275136377038)
 
-> https://twitter.com/christophera/status/1811438557011353658
+> [https://twitter.com/christophera/status/1811438557011353658](https://twitter.com/christophera/status/1811438557011353658)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:31:07 +0000 2024](https://twitter.com/ChristopherA/status/1820663868701700306)
 
@@ -149,7 +149,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182066327513
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820663868701700306)
 
-> Here is the point in our video on GSTP (at 14m38s) where we talk about  Encapsulated State Continuation in GSTP: https://youtu.be/QnH14LkJOnI?si=STish-xNcW-9ZggV&t=877
+> Here is the point in our video on GSTP (at 14m38s) where we talk about  Encapsulated State Continuation in GSTP: [https://youtu.be/QnH14LkJOnI?si=STish-xNcW-9ZggV&t=877](https://youtu.be/QnH14LkJOnI?si=STish-xNcW-9ZggV&t=877)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:36:33 +0000 2024](https://twitter.com/ChristopherA/status/1820665238015873484)
 
@@ -171,7 +171,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182066523801
 
 Replying to [@TheBlueMatt](https://twitter.com/TheBlueMatt/status/1820787293411582296)
 
-> https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg https://twitter.com/ChristopherA/status/1820662975495364804
+> [https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg](https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg) [https://twitter.com/ChristopherA/status/1820662975495364804](https://twitter.com/ChristopherA/status/1820662975495364804)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 17:50:28 +0000 2024](https://twitter.com/ChristopherA/status/1820880133559124270)
 
@@ -179,7 +179,7 @@ Replying to [@TheBlueMatt](https://twitter.com/TheBlueMatt/status/18207872934115
 
 Replying to [@Stadicus3000](https://twitter.com/Stadicus3000/status/1820556338503500080)
 
-> https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg https://twitter.com/ChristopherA/status/1820662975495364804
+> [https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg](https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg) [https://twitter.com/ChristopherA/status/1820662975495364804](https://twitter.com/ChristopherA/status/1820662975495364804)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 17:50:48 +0000 2024](https://twitter.com/ChristopherA/status/1820880217881375022)
 
@@ -215,7 +215,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182158166642
 
 ----
 
-> This month's Gordian Developer Meeting (first Wednesday) hosted by @BlockchainComns  was all about seed resilience. It's the vitally important "Level 0" for cryptographic security. We've got a video of the complete discussion [1/9]. https://www.youtube.com/watch?v=e6Ag1X2oC1Y
+> This month's Gordian Developer Meeting (first Wednesday) hosted by @BlockchainComns  was all about seed resilience. It's the vitally important "Level 0" for cryptographic security. We've got a video of the complete discussion [1/9]. [https://www.youtube.com/watch?v=e6Ag1X2oC1Y](https://www.youtube.com/watch?v=e6Ag1X2oC1Y)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:07 +0000 2024](https://twitter.com/ChristopherA/status/1821581666428842428)
 
@@ -231,7 +231,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182158167027
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581668249153664)
 
-> One is BIP-85, a seed-of-seeds methodology that lets you use one seed to generate seeds for all of your devices. @akarve, a BIP-85 Champion, gave a presentation on the topic. [3/9] https://www.youtube.com/watch?v=4W4kmV-oHrA
+> One is BIP-85, a seed-of-seeds methodology that lets you use one seed to generate seeds for all of your devices. @akarve, a BIP-85 Champion, gave a presentation on the topic. [3/9] [https://www.youtube.com/watch?v=4W4kmV-oHrA](https://www.youtube.com/watch?v=4W4kmV-oHrA)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:08 +0000 2024](https://twitter.com/ChristopherA/status/1821581670279254415)
 
@@ -239,7 +239,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182158166824
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581674213421475)
 
-> The Ledger Seed Tool app has been security-reviewed by Ledger and is available through Ledger Live. [6/9] https://www.ledger.com/blog/seed-tool-app
+> The Ledger Seed Tool app has been security-reviewed by Ledger and is available through Ledger Live. [6/9] [https://www.ledger.com/blog/seed-tool-app](https://www.ledger.com/blog/seed-tool-app)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:09 +0000 2024](https://twitter.com/ChristopherA/status/1821581677145321615)
 
@@ -247,7 +247,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182158167421
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581672535740842)
 
-> Another new seed-related innovation actually built on our own work. Aido has released Ledger Seed Tool, which brings Shamir's Secret Sharing to Ledger using our own SSKR. Here's his presentation. [5/9] https://www.youtube.com/watch?v=2GjnZjZloec
+> Another new seed-related innovation actually built on our own work. Aido has released Ledger Seed Tool, which brings Shamir's Secret Sharing to Ledger using our own SSKR. Here's his presentation. [5/9] [https://www.youtube.com/watch?v=2GjnZjZloec](https://www.youtube.com/watch?v=2GjnZjZloec)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:09 +0000 2024](https://twitter.com/ChristopherA/status/1821581674213421475)
 
@@ -255,7 +255,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182158167253
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581679246622843)
 
-> Join @BlockchainComns to talk about these futures and more by signing up to receive announcements about *next* month's wallet developers meeting (September 4th). [8/9] https://www.blockchaincommons.com/subscribe/
+> Join @BlockchainComns to talk about these futures and more by signing up to receive announcements about *next* month's wallet developers meeting (September 4th). [8/9] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:10 +0000 2024](https://twitter.com/ChristopherA/status/1821581680769139107)
 
@@ -271,7 +271,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182158167714
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581680769139107)
 
-> Support our work on improving the resilience and security of not just seeds, but all the digital assets they protect, by becoming a GitHub sponsor. [9/9] https://github.com/sponsors/BlockchainCommons
+> Support our work on improving the resilience and security of not just seeds, but all the digital assets they protect, by becoming a GitHub sponsor. [9/9] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:11 +0000 2024](https://twitter.com/ChristopherA/status/1821581682371395853)
 
@@ -285,7 +285,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350855956
 
 ----
 
-> Gordian Envelope is a Smart Document system that supports secure data storage and holder-based elision. We've created a new "Understanding Gordian Envelope" video that introduces the technology. [1/11] https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+> Gordian Envelope is a Smart Document system that supports secure data storage and holder-based elision. We've created a new "Understanding Gordian Envelope" video that introduces the technology. [1/11] [https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS](https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:54 +0000 2024](https://twitter.com/ChristopherA/status/1823508559566705124)
 
@@ -301,7 +301,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350856379
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508562360127747)
 
-> Part two of "Understanding Gordian Envelope" then looks at Envelope's Extensions. [4/11] https://www.youtube.com/watch?v=uFxStP3ATkw&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+> Part two of "Understanding Gordian Envelope" then looks at Envelope's Extensions. [4/11] [https://www.youtube.com/watch?v=uFxStP3ATkw&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS](https://www.youtube.com/watch?v=uFxStP3ATkw&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:55 +0000 2024](https://twitter.com/ChristopherA/status/1823508563798712385)
 
@@ -309,7 +309,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350856236
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508560988528959)
 
-> Part one of the video focuses on the Envelope metaphor and key concepts such as cryptographic hashes, elision and redaction, determinism, and dCBOR. It also talks about how data is represented in an Envelope. [3/11] https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+> Part one of the video focuses on the Envelope metaphor and key concepts such as cryptographic hashes, elision and redaction, determinism, and dCBOR. It also talks about how data is represented in an Envelope. [3/11] [https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS](https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:55 +0000 2024](https://twitter.com/ChristopherA/status/1823508562360127747)
 
@@ -317,7 +317,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350856098
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508568089493580)
 
-> If you prefer reading to videos, @blockchaincomns also has considerable information about Gordian Envelope on its Developer pages. [8/11] https://developer.blockchaincommons.com/envelope/
+> If you prefer reading to videos, @blockchaincomns also has considerable information about Gordian Envelope on its Developer pages. [8/11] [https://developer.blockchaincommons.com/envelope/](https://developer.blockchaincommons.com/envelope/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:56 +0000 2024](https://twitter.com/ChristopherA/status/1823508569427468687)
 
@@ -333,7 +333,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350856662
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508565283495937)
 
-> Many of Gordian Envelope's extensions combine to support Gordian Sealed Transaction Protocol, which was also the subject of a recent video. [6/11] https://www.youtube.com/watch?v=QnH14LkJOnI&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+> Many of Gordian Envelope's extensions combine to support Gordian Sealed Transaction Protocol, which was also the subject of a recent video. [6/11] [https://www.youtube.com/watch?v=QnH14LkJOnI&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS](https://www.youtube.com/watch?v=QnH14LkJOnI&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:56 +0000 2024](https://twitter.com/ChristopherA/status/1823508566629867942)
 
@@ -341,7 +341,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350856528
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508572405424169)
 
-> In order for our work to continue, we need the support of patrons. Please join us! [11/11] https://github.com/sponsors/BlockchainCommons
+> In order for our work to continue, we need the support of patrons. Please join us! [11/11] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:57 +0000 2024](https://twitter.com/ChristopherA/status/1823508573848264830)
 
@@ -349,7 +349,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350857240
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508570819977548)
 
-> Stay up to date with new specifications for data privacy and wallet interoperability by joining the Blockchain Commons announcements-only mailing lists or Signal channels. [10/11] https://www.blockchaincommons.com/subscribe/
+> Stay up to date with new specifications for data privacy and wallet interoperability by joining the Blockchain Commons announcements-only mailing lists or Signal channels. [10/11] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:57 +0000 2024](https://twitter.com/ChristopherA/status/1823508572405424169)
 
@@ -377,7 +377,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/182350856942
 
 Replying to [@nigeleccles and @FanDuel](https://twitter.com/nigeleccles/status/1823690889862025268)
 
-> Common pool equity wipeout is far too common. It has happened to me multiple times in both my entrepreneurial and angel experience. Sadly, this means that I and other early-stage investors no longer invest. https://www.lifewithalacrity.com/article/on-being-an-angel/#lessons-from-alacrity-ventures
+> Common pool equity wipeout is far too common. It has happened to me multiple times in both my entrepreneurial and angel experience. Sadly, this means that I and other early-stage investors no longer invest. [https://www.lifewithalacrity.com/article/on-being-an-angel/#lessons-from-alacrity-ventures](https://www.lifewithalacrity.com/article/on-being-an-angel/#lessons-from-alacrity-ventures)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 14 18:54:46 +0000 2024](https://twitter.com/ChristopherA/status/1823795416196067505)
 
@@ -385,7 +385,7 @@ Replying to [@nigeleccles and @FanDuel](https://twitter.com/nigeleccles/status/1
 
 Replying to [@nvk](https://twitter.com/nvk/status/1823754072517960036)
 
-> Have you seen our work on how Gordian Envelope with Request / Response can significantly improve not only security (by making multisig easer) but also improving the user experience by automating some choices? https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md The ecosystem needs more funding to make this… 
+> Have you seen our work on how Gordian Envelope with Request / Response can significantly improve not only security (by making multisig easer) but also improving the user experience by automating some choices? [https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md](https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md) The ecosystem needs more funding to make this… 
 > 
 > ![1823869470596849885-GU-vet8a4AMkaAB]({{ site.url }}{{ site.baseurl }}/assets/images/media/1823869470596849885-GU-vet8a4AMkaAB.webp)
 
@@ -395,7 +395,7 @@ Replying to [@nvk](https://twitter.com/nvk/status/1823754072517960036)
 
 Replying to [@nvk](https://twitter.com/ChristopherA/status/1823869470596849885)
 
-> https://developer.blockchaincommons.com/envelope/gstp/
+> [https://developer.blockchaincommons.com/envelope/gstp/](https://developer.blockchaincommons.com/envelope/gstp/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 15 01:37:09 +0000 2024](https://twitter.com/ChristopherA/status/1823896677964783669)
 
@@ -409,13 +409,13 @@ Replying to [@nvk](https://twitter.com/ChristopherA/status/1823869470596849885)
 
 ----
 
-> Put of any good solution is first understanding the problem. A good addition to the literature on Proof of Personhood. (I do still feel that we need more effort to understand risks of over-identification—how can we be the heroes the world needs if every action requires an ID?) https://twitter.com/sjgadler/status/1824245211322568903
+> Put of any good solution is first understanding the problem. A good addition to the literature on Proof of Personhood. (I do still feel that we need more effort to understand risks of over-identification—how can we be the heroes the world needs if every action requires an ID?) [https://twitter.com/sjgadler/status/1824245211322568903](https://twitter.com/sjgadler/status/1824245211322568903)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 16 02:33:58 +0000 2024](https://twitter.com/ChristopherA/status/1824273367052300300)
 
 ----
 
-> Part of any good solution is first understanding the problem. A good addition to the literature on Proof of Personhood. (I do still feel that we need more effort to understand risks of over-identification—how can we be the heroes the world needs if every action requires an ID?) https://twitter.com/sjgadler/status/1824245211322568903
+> Part of any good solution is first understanding the problem. A good addition to the literature on Proof of Personhood. (I do still feel that we need more effort to understand risks of over-identification—how can we be the heroes the world needs if every action requires an ID?) [https://twitter.com/sjgadler/status/1824245211322568903](https://twitter.com/sjgadler/status/1824245211322568903)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 16 02:53:03 +0000 2024](https://twitter.com/ChristopherA/status/1824278167118549106)
 
