--- a/_tweets-md/2024/2024-10-01-tweets.md
+++ b/_tweets-md/2024/2024-10-01-tweets.md
@@ -26,19 +26,19 @@ Replying to [@brian_trollz](https://twitter.com/brian_trollz/status/184126992893
 
 ----
 
-> I agree with this assessment (in the long-term). Today I will still use a hardened single-key device for greater security, but longer term the advantages of MPC (multi-party computation) using cryptography like FROST will be much more secure AND Ofer greater resilience. https://twitter.com/miguel_de_vega/status/1841600801351127157
+> I agree with this assessment (in the long-term). Today I will still use a hardened single-key device for greater security, but longer term the advantages of MPC (multi-party computation) using cryptography like FROST will be much more secure AND Ofer greater resilience. [https://twitter.com/miguel_de_vega/status/1841600801351127157](https://twitter.com/miguel_de_vega/status/1841600801351127157)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 03 01:34:23 +0000 2024](https://twitter.com/ChristopherA/status/1841652988894699704)
 
 ----
 
-> 👏👏 https://twitter.com/real_or_random/status/1843312692280610912
+> 👏👏 [https://twitter.com/real_or_random/status/1843312692280610912](https://twitter.com/real_or_random/status/1843312692280610912)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 07 22:21:13 +0000 2024](https://twitter.com/ChristopherA/status/1843416317707333817)
 
 ----
 
-> I’ve been saying that the addition of Schnorr to bitcoin would offer many new cryptographic opportunities. Adapter Signatures, Poelstra’s scriptless scripts, and more. In this paper, you need a solution to the zk-proof for the Schnorr sig to be valid, allowing covenants in L1. https://twitter.com/_weidai/status/1843526255045685253
+> I’ve been saying that the addition of Schnorr to bitcoin would offer many new cryptographic opportunities. Adapter Signatures, Poelstra’s scriptless scripts, and more. In this paper, you need a solution to the zk-proof for the Schnorr sig to be valid, allowing covenants in L1. [https://twitter.com/_weidai/status/1843526255045685253](https://twitter.com/_weidai/status/1843526255045685253)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 02:27:42 +0000 2024](https://twitter.com/ChristopherA/status/1843840735843627387)
 
@@ -46,7 +46,7 @@ Replying to [@brian_trollz](https://twitter.com/brian_trollz/status/184126992893
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1844106610974904617)
 
-> Many interpret self-sovereign identity as being self-centric. That was not the goal! Identity is also about how others know you—such as your relationship with a community, a team, or family.[3/14] https://www.lifewithalacrity.com/article/origins-SSI/
+> Many interpret self-sovereign identity as being self-centric. That was not the goal! Identity is also about how others know you—such as your relationship with a community, a team, or family.[3/14] [https://www.lifewithalacrity.com/article/origins-SSI/](https://www.lifewithalacrity.com/article/origins-SSI/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:12 +0000 2024](https://twitter.com/ChristopherA/status/1844106612384149910)
 
@@ -54,13 +54,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184410661097
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1844106609552916560)
 
-> This builds on my foundational article from 2016, "The Path to Self-Sovereign Identity", where I envisioned as a digital identity we truly control. Today #SSI is becoming reality! But we can do more. [2/14] https://www.lifewithalacrity.com/article/the-path-to-self-soverereign-identity/
+> This builds on my foundational article from 2016, "The Path to Self-Sovereign Identity", where I envisioned as a digital identity we truly control. Today #SSI is becoming reality! But we can do more. [2/14] [https://www.lifewithalacrity.com/article/the-path-to-self-soverereign-identity/](https://www.lifewithalacrity.com/article/the-path-to-self-soverereign-identity/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:12 +0000 2024](https://twitter.com/ChristopherA/status/1844106610974904617)
 
 ----
 
-> Identity isn't just about who you are, it's about who you're connected to &amp; how you relate. My new article, "Edge Identifiers &amp; Cliques", explores how cryptographic innovations redefine identity, making it more connected, resilient &amp; decentralized. [1/14] https://www.blockchaincommons.com/musings/musings-cliques-1/
+> Identity isn't just about who you are, it's about who you're connected to &amp; how you relate. My new article, "Edge Identifiers &amp; Cliques", explores how cryptographic innovations redefine identity, making it more connected, resilient &amp; decentralized. [1/14] [https://www.blockchaincommons.com/musings/musings-cliques-1/](https://www.blockchaincommons.com/musings/musings-cliques-1/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:12 +0000 2024](https://twitter.com/ChristopherA/status/1844106609552916560)
 
@@ -116,7 +116,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184410661513
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1844106622404264433)
 
-> Schnorr-based signatures have become reality in MuSig2 and FROST. These methods allow multi-party consensus and better security, but they also allow us to model digital signatures in a new way, to better capture the relational essence of identity. [11/14] https://www.blockchaincommons.com/musings/Schnorr-Intro/
+> Schnorr-based signatures have become reality in MuSig2 and FROST. These methods allow multi-party consensus and better security, but they also allow us to model digital signatures in a new way, to better capture the relational essence of identity. [11/14] [https://www.blockchaincommons.com/musings/Schnorr-Intro/](https://www.blockchaincommons.com/musings/Schnorr-Intro/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:15 +0000 2024](https://twitter.com/ChristopherA/status/1844106623863910546)
 
@@ -124,7 +124,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184410662240
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1844106621162774665)
 
-> Using Schnorr signatures, these edge and clique identities can be aggregated efficiently, making them indistinguishable from individual identities, offering built-in privacy advantages while scaling in decentralized networks. [10/14] https://www.blockchaincommons.com/musings/Schnorr-Intro/
+> Using Schnorr signatures, these edge and clique identities can be aggregated efficiently, making them indistinguishable from individual identities, offering built-in privacy advantages while scaling in decentralized networks. [10/14] [https://www.blockchaincommons.com/musings/Schnorr-Intro/](https://www.blockchaincommons.com/musings/Schnorr-Intro/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:15 +0000 2024](https://twitter.com/ChristopherA/status/1844106622404264433)
 
@@ -132,7 +132,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184410662116
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1844106626816672202)
 
-> Join us to redefine digital identity and build a resilient, privacy-preserving future. Collaborate with us to develop cutting-edge solutions or support our work via @BlockchainComns. Together, we can make edge &amp; clique identities a reality![14/14] https://github.com/sponsors/BlockchainCommons
+> Join us to redefine digital identity and build a resilient, privacy-preserving future. Collaborate with us to develop cutting-edge solutions or support our work via @BlockchainComns. Together, we can make edge &amp; clique identities a reality![14/14] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:16 +0000 2024](https://twitter.com/ChristopherA/status/1844106628221763794)
 
@@ -140,7 +140,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184410662681
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1844106625508147576)
 
-> Stay tuned for my next article in my "Musings of a Trust Architect" on open cliques, fuzzy cliques, and cliques of devices! Curious about 'fuzzy cliques'? They’re about adaptive group identities where members change but trust remains. [13/14] https://www.blockchaincommons.com/musings/
+> Stay tuned for my next article in my "Musings of a Trust Architect" on open cliques, fuzzy cliques, and cliques of devices! Curious about 'fuzzy cliques'? They’re about adaptive group identities where members change but trust remains. [13/14] [https://www.blockchaincommons.com/musings/](https://www.blockchaincommons.com/musings/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 09 20:04:16 +0000 2024](https://twitter.com/ChristopherA/status/1844106626816672202)
 
@@ -182,7 +182,7 @@ Replying to [@iang_fc and @BlockchainComns](https://twitter.com/iang_fc/status/1
 
 ----
 
-> The Q3 report was published by @BlockchainComns today. Our FROST Implementers Workshop was perhaps the highlight, but there was a lot of good work advancing the state of wallet design and interoperability this quarter. [1/10] https://twitter.com/BlockchainComns/status/1846586976197304399
+> The Q3 report was published by @BlockchainComns today. Our FROST Implementers Workshop was perhaps the highlight, but there was a lot of good work advancing the state of wallet design and interoperability this quarter. [1/10] [https://twitter.com/BlockchainComns/status/1846586976197304399](https://twitter.com/BlockchainComns/status/1846586976197304399)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:19 +0000 2024](https://twitter.com/ChristopherA/status/1846630018505756775)
 
@@ -190,7 +190,7 @@ Replying to [@iang_fc and @BlockchainComns](https://twitter.com/iang_fc/status/1
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630021047505149)
 
-> If one thing's important at @BlockchainComns, it's our ability to work with wallet developers to produce specifications &amp; references that are useful to everyone. (Become a member of our community by signing up for our Gordian meetings!) [4/10] https://www.blockchaincommons.com/subscribe/
+> If one thing's important at @BlockchainComns, it's our ability to work with wallet developers to produce specifications &amp; references that are useful to everyone. (Become a member of our community by signing up for our Gordian meetings!) [4/10] [https://www.blockchaincommons.com/subscribe/](https://www.blockchaincommons.com/subscribe/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:20 +0000 2024](https://twitter.com/ChristopherA/status/1846630022494535902)
 
@@ -198,7 +198,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663002104
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630019856322859)
 
-> It was one of two big meetings for the quarter, the other being a seed recovery meeting, where we had presentations both on BIP-85 and a new @Ledger app that uses our SSKR functionality. [3/10] https://www.youtube.com/watch?v=e6Ag1X2oC1Y
+> It was one of two big meetings for the quarter, the other being a seed recovery meeting, where we had presentations both on BIP-85 and a new @Ledger app that uses our SSKR functionality. [3/10] [https://www.youtube.com/watch?v=e6Ag1X2oC1Y](https://www.youtube.com/watch?v=e6Ag1X2oC1Y)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:20 +0000 2024](https://twitter.com/ChristopherA/status/1846630021047505149)
 
@@ -206,7 +206,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663001985
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630018505756775)
 
-> FROST is a threshold signature system that supports MPC and improves the resilience and security of digital assets. We held an implementers meeting where designers &amp; cryptographers talked about challenges, successes, and the state of the art. [2/10] https://developer.blockchaincommons.com/frost/meeting2/
+> FROST is a threshold signature system that supports MPC and improves the resilience and security of digital assets. We held an implementers meeting where designers &amp; cryptographers talked about challenges, successes, and the state of the art. [2/10] [https://developer.blockchaincommons.com/frost/meeting2/](https://developer.blockchaincommons.com/frost/meeting2/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:20 +0000 2024](https://twitter.com/ChristopherA/status/1846630019856322859)
 
@@ -214,7 +214,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663001850
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630026198053323)
 
-> We also wrote some new Envelope subpages on Gordian Sealed Transactions (GSTP) and on Encrypted State Continuation (ESC), powerful and interoperable way to use Envelope to communicate. [8/10] https://developer.blockchaincommons.com/envelope/
+> We also wrote some new Envelope subpages on Gordian Sealed Transactions (GSTP) and on Encrypted State Continuation (ESC), powerful and interoperable way to use Envelope to communicate. [8/10] [https://developer.blockchaincommons.com/envelope/](https://developer.blockchaincommons.com/envelope/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:21 +0000 2024](https://twitter.com/ChristopherA/status/1846630027506663498)
 
@@ -222,7 +222,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663002619
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630025036185804)
 
-> Our developer pages are intended to help anyone who wants to use our specs. They explain the importance of our specs and their usage. This quarter we revamped them to demonstrate a new stack-based model that better puts everything in its place. [7/10] https://developer.blockchaincommons.com/
+> Our developer pages are intended to help anyone who wants to use our specs. They explain the importance of our specs and their usage. This quarter we revamped them to demonstrate a new stack-based model that better puts everything in its place. [7/10] [https://developer.blockchaincommons.com/](https://developer.blockchaincommons.com/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:21 +0000 2024](https://twitter.com/ChristopherA/status/1846630026198053323)
 
@@ -238,7 +238,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663002368
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630022494535902)
 
-> We also published some minor updates to Gordian SeedTool for iOS in Q3. It continues to be our reference implementation for best practices for seed storage. [5/10] https://apps.apple.com/us/app/gordian-seed-tool/id1545088229
+> We also published some minor updates to Gordian SeedTool for iOS in Q3. It continues to be our reference implementation for best practices for seed storage. [5/10] [https://apps.apple.com/us/app/gordian-seed-tool/id1545088229](https://apps.apple.com/us/app/gordian-seed-tool/id1545088229)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:21 +0000 2024](https://twitter.com/ChristopherA/status/1846630023681528216)
 
@@ -246,7 +246,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663002249
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630029087883534)
 
-> If you find @BlockchainComns work valuable, become a sponsor. We need your support so that we'll be around to bring in the next wave of innovations, including releasing Gordian Depot, Gordian Companion, and more! [10/10] https://github.com/sponsors/BlockchainCommons
+> If you find @BlockchainComns work valuable, become a sponsor. We need your support so that we'll be around to bring in the next wave of innovations, including releasing Gordian Depot, Gordian Companion, and more! [10/10] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:22 +0000 2024](https://twitter.com/ChristopherA/status/1846630030274924974)
 
@@ -254,7 +254,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663002908
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1846630027506663498)
 
-> Read the new @BlockchainComns quarterly report for all of these details and more. [9/10] https://www.blockchaincommons.com/quarterlies/Q3-2024/
+> Read the new @BlockchainComns quarterly report for all of these details and more. [9/10] [https://www.blockchaincommons.com/quarterlies/Q3-2024/](https://www.blockchaincommons.com/quarterlies/Q3-2024/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 19:11:22 +0000 2024](https://twitter.com/ChristopherA/status/1846630029087883534)
 
@@ -266,7 +266,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184663002750
 
 ----
 
-> I largely agree with the marketing issues resulting in failures of Verifiable Credentials brought up by @rileyphughes of @trinsic in this article. But he doesn’t bring up the privacy &amp; human rights issues that took second seat that also contributed to the lack of success. https://twitter.com/rileyphughes/status/1846316783441268918
+> I largely agree with the marketing issues resulting in failures of Verifiable Credentials brought up by @rileyphughes of @trinsic in this article. But he doesn’t bring up the privacy &amp; human rights issues that took second seat that also contributed to the lack of success. [https://twitter.com/rileyphughes/status/1846316783441268918](https://twitter.com/rileyphughes/status/1846316783441268918)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 16 23:34:46 +0000 2024](https://twitter.com/ChristopherA/status/1846696317843919199)
 
@@ -302,7 +302,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184669631784
 
 ----
 
-> Last week, I introduced "cryptographic cliques"—a novel way to view identity based on your connections &amp; relationships. This week, I expand that concept with a new article detailing three variants: open cliques, closed cliques, and device cliques. [1/11] https://www.blockchaincommons.com/musings/musings-cliques-2/
+> Last week, I introduced "cryptographic cliques"—a novel way to view identity based on your connections &amp; relationships. This week, I expand that concept with a new article detailing three variants: open cliques, closed cliques, and device cliques. [1/11] [https://www.blockchaincommons.com/musings/musings-cliques-2/](https://www.blockchaincommons.com/musings/musings-cliques-2/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 18 14:34:26 +0000 2024](https://twitter.com/ChristopherA/status/1847285114155483260)
 
@@ -320,7 +320,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184728511710
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1847285115791237401)
 
-> Closed cliques are a great starting point, but there are several variants of cryptographic cliques, each offering unique advantages for specific identity use cases. This new article discusses those variants. [3/11] https://www.blockchaincommons.com/musings/musings-cliques-2/
+> Closed cliques are a great starting point, but there are several variants of cryptographic cliques, each offering unique advantages for specific identity use cases. This new article discusses those variants. [3/11] [https://www.blockchaincommons.com/musings/musings-cliques-2/](https://www.blockchaincommons.com/musings/musings-cliques-2/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 18 14:34:27 +0000 2024](https://twitter.com/ChristopherA/status/1847285117104140529)
 
@@ -356,7 +356,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184728511889
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1847285125475950837)
 
-> Living systems theory informs this work: identity isn’t just about isolated nodes (like individuals), but about their connections. Edge identifiers and cryptography cliques allow us to reflect this interconnectedness in a cryptographic framework. [8/11] https://www.blockchaincommons.com/musings/origins-SSI/#living-systems-theory
+> Living systems theory informs this work: identity isn’t just about isolated nodes (like individuals), but about their connections. Edge identifiers and cryptography cliques allow us to reflect this interconnectedness in a cryptographic framework. [8/11] [https://www.blockchaincommons.com/musings/origins-SSI/#living-systems-theory](https://www.blockchaincommons.com/musings/origins-SSI/#living-systems-theory)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 18 14:34:29 +0000 2024](https://twitter.com/ChristopherA/status/1847285127065591939)
 
@@ -374,7 +374,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184728512327
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1847285128705556752)
 
-> Curious about cryptographic cliques and how they could transform digital identity? Let's collaborate on how we can shape a more secure &amp; connected future together. Join the discussion here or at https://github.com/orgs/BlockchainCommons/discussions—your insights could drive the next big leap in identity!…
+> Curious about cryptographic cliques and how they could transform digital identity? Let's collaborate on how we can shape a more secure &amp; connected future together. Join the discussion here or at [https://github.com/orgs/BlockchainCommons/discussions—your](https://github.com/orgs/BlockchainCommons/discussions—your) insights could drive the next big leap in identity!…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 18 14:34:30 +0000 2024](https://twitter.com/ChristopherA/status/1847285130366513408)
 
@@ -382,7 +382,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184728512870
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1847285127065591939)
 
-> Modeling identity is a crucial building block for the digital age. Cliques provide an intriguing new approach thanks to their focus on relationships and consensus—offering increased resilience, security and scalability. [9/11] https://www.blockchaincommons.com/musings/musings-cliques-2/
+> Modeling identity is a crucial building block for the digital age. Cliques provide an intriguing new approach thanks to their focus on relationships and consensus—offering increased resilience, security and scalability. [9/11] [https://www.blockchaincommons.com/musings/musings-cliques-2/](https://www.blockchaincommons.com/musings/musings-cliques-2/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 18 14:34:30 +0000 2024](https://twitter.com/ChristopherA/status/1847285128705556752)
 
@@ -390,13 +390,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/184728512706
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1847285130366513408)
 
-> Sponsor our work on cliques at @BlockchainComns! Your patronage fuels the development of decentralized privacy-enhancing, relationship-focused digital identity solutions. Together, we can build a resilient future. Help make a difference! [11/11] https://github.com/sponsors/BlockchainCommons
+> Sponsor our work on cliques at @BlockchainComns! Your patronage fuels the development of decentralized privacy-enhancing, relationship-focused digital identity solutions. Together, we can build a resilient future. Help make a difference! [11/11] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 18 14:34:31 +0000 2024](https://twitter.com/ChristopherA/status/1847285132295905331)
 
 ----
 
-> Today at #IIW I asked an important question: Has our SSI Ecosystem Become Morally Bankrupt?  In our pursuit of mainstream adoption have we sacrificed the very principles that set Self-Sovereign Identity apart? [1/7] https://www.lifewithalacrity.com/article/ssi-bankruptcy/
+> Today at #IIW I asked an important question: Has our SSI Ecosystem Become Morally Bankrupt?  In our pursuit of mainstream adoption have we sacrificed the very principles that set Self-Sovereign Identity apart? [1/7] [https://www.lifewithalacrity.com/article/ssi-bankruptcy/](https://www.lifewithalacrity.com/article/ssi-bankruptcy/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 29 20:38:11 +0000 2024](https://twitter.com/ChristopherA/status/1851362920271335613)
 
@@ -436,7 +436,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185136292821
 
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1851362926877446509)
 
-> The whole argument for how the modern-day vulnerability of SSI has arisen from our compromises appears in my newest Musings of a Trust Architect. [6/7] https://www.lifewithalacrity.com/article/ssi-bankruptcy/
+> The whole argument for how the modern-day vulnerability of SSI has arisen from our compromises appears in my newest Musings of a Trust Architect. [6/7] [https://www.lifewithalacrity.com/article/ssi-bankruptcy/](https://www.lifewithalacrity.com/article/ssi-bankruptcy/)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 29 20:38:13 +0000 2024](https://twitter.com/ChristopherA/status/1851362928219615517)
 
@@ -468,7 +468,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/185136292972
 
 Replying to [@tang_talks](https://twitter.com/tang_talks/status/1851387134953095216)
 
-> https://x.com/ottomorac/status/1851420098365702241
+> [https://x.com/ottomorac/status/1851420098365702241](https://x.com/ottomorac/status/1851420098365702241)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 30 18:16:03 +0000 2024](https://twitter.com/ChristopherA/status/1851689538823033305)
 
